roots of x of x^N+1=0

--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -295,8 +295,8 @@ Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$.
 \begin{enumerate}
   \item Mappings:
     \begin{align*}
-      &\opLT\brs{\cosh\brp{\omega_o x} \fg(x)}
-      \\&= \opLT\brs{\brp{\frac{e^{\omega_o x} + e^{-\omega_o x}}{2}} \fg(x)}
+      \opLT\brs{\cosh\brp{\omega_o x} \fg(x)}
+        &= \opLT\brs{\brp{\frac{e^{\omega_o x} + e^{-\omega_o x}}{2}} \fg(x)}
         && \text{by definition of $\cosh(x)$}
         && \text{\xref{def:cosh}}
       \\&= \frac{1}{2}\opLT\brs{e^{ \omega_o x} \fg(x)}(s)
@@ -312,8 +312,8 @@ Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$.
         &&
       \\
       \\
-      &\opLT\brs{\sinh\brp{\omega_o x} \fg(x)}
-      \\&= \opLT\brs{\brp{\frac{e^{\omega_o x} - e^{-\omega_o x}}{2}} \fg(x)}
+      \opLT\brs{\sinh\brp{\omega_o x} \fg(x)}
+        &= \opLT\brs{\brp{\frac{e^{\omega_o x} - e^{-\omega_o x}}{2}} \fg(x)}
         && \text{by definition of $\sinh(x)$}
         && \text{\xref{def:sinh}}
       \\&=     \frac{1}{2}\opLT\brs{e^{ \omega_o x} \fg(x)}(s)
@@ -496,9 +496,9 @@ and $\step(x)$ the \fncte{unit step} function.
     && \text{by \prope{modulation}}
     && \text{\xref{thm:opLT_mod}}
   \\&= \frac{1}{s+\alpha}
-    && \forall\Real(s) \in \intoo{0-\Real(\alpha)}{\infty-\Real(\alpha)}
-    && \text{by \prope{causality}}
-    && \text{\xref{thm:opLT_step}}
+    && \mathrlap{\text{$\forall\Real(s) \in \intoo{0-\Real(\alpha)}{\infty-\Real(\alpha)}$ by \prefp{thm:opLT_step}}}
+   %&& \text{by \prope{causality}}
+   %&& \text{\xref{thm:opLT_step}}
   \\&= \frac{1}{s+\alpha}
     && \forall\Real(s) > -\Real(\alpha)
     &&
@@ -510,9 +510,9 @@ and $\step(x)$ the \fncte{unit step} function.
     && \text{by \prope{modulation}}
     && \text{\xref{thm:opLT_mod}}
   \\&= \frac{-1}{s+\alpha}
-    && \forall\Real(s) \in \intoo{-\infty-\Real(\alpha)}{0-(-\Real(\alpha))}
-    && \text{by \prope{anti-causality}}
-    && \text{\xref{thm:opLT_step}}
+    && \mathrlap{\text{$\forall\Real(s) \in \intoo{-\infty-\Real(\alpha)}{0-(-\Real(\alpha))}$ by \prefp{thm:opLT_step}}}
+   %&& \text{by \prope{anti-causality}}
+   %&& \text{\xref{thm:opLT_step}}
   \\&= \frac{-1}{s+\alpha}
     && \forall\Real(s) < \Real(\alpha)
     && \text{by \prope{anti-causality}}
@@ -550,7 +550,7 @@ and $\step(x)$ the \fncte{unit step} function.
   \\&= \frac{1}{2}\brs{\frac{1}{s-i\omega_o}}
      + \frac{1}{2}\brs{\frac{1}{s+i\omega_o}}
     && \Real(s) > 0
-    && \text{by \prope{causal} property}
+    && \text{by \prope{causal} prop.}
     && \text{\xref{thm:opLT_step}}
   \\&= \mathrlap{
        \frac{1}{2}\brs{\frac{1}{s-i\omega_o}}\brs{\frac{s+i\omega_o}{s+i\omega_o}}
@@ -571,7 +571,7 @@ and $\step(x)$ the \fncte{unit step} function.
   \\&= -\frac{i}{2}\brs{\frac{1}{s-i\omega_o}}
        +\frac{i}{2}\brs{\frac{1}{s+i\omega_o}}
     && \Real(s) > 0
-    && \text{by \prope{causal} property}
+    && \text{by \prope{causal} prop.}
     && \text{\xref{thm:opLT_step}}
   \\&= \mathrlap{
      - \frac{i}{2}\brs{\frac{1}{s-i\omega_o}}\brs{\frac{s+i\omega_o}{s+i\omega_o}}
