--- a/common/operator.tex
+++ b/common/operator.tex
@@ -501,10 +501,12 @@ Let $\spW$, $\spX$, $\spY$, and $\spZ$ be linear spaces over a field $\F$.
 \end{proof}
   
 %---------------------------------------
-\begin{theorem}[Fundamental theorem of linear equations]
+\begin{theorem}[\thmd{Fundamental theorem of linear equations}]
 \index{Fundamental theorem of linear equations}
 \index{theorems!Fundamental theorem of linear equations}
-\citerpg{michel1993}{99}{048667598X}
+\footnote{
+  \citerpg{michel1993}{99}{048667598X}
+  }
 %---------------------------------------
 %Let $\opL\in\clOxy$ be a linear operator.
 Let $\clOxy$ be the set of all operators from a linear space $\spX$ to a linear space $\spY$.
@@ -2082,7 +2084,8 @@ and $\oppI(\opN)$ the    \structe{image set} of $\opN$ in $\clBhh$.
   }
 \end{theorem}
 \begin{proof}
-The proof in (1) is flawed. This implies that (2) is also flawed. [Rudin] claims both to be true.\citep{rudinf}{313} \problem
+The proof in (1) is flawed. This implies that (2) is also flawed. 
+\citerp{rudinf}{313} claims both to be true. \problem
 \begin{align*}
   \intertext{1. Proof that
   $\opNa\opN=\opN\opNa \implies \opNa\fpsi = \lambda^\ast \fpsi$:}
