--- a/common/wavelets/vanish.tex
+++ b/common/wavelets/vanish.tex
@@ -7,9 +7,9 @@
 \chapter{Vanishing Moments Constraint}
 \label{chp:vanish}
 %======================================
-%Besides the \prope{orthonormality} constraint \xref{def:ows} and 
+%Besides the \prope{orthonormality} constraint \xref{def:ows} and
 %the resulting \prope{partition of unity} constraint \xref{def:pun},
-One of the most common wavelet design constraints is 
+One of the most common wavelet design constraints is
 the number of \prope{vanishing moments} $p$ on the wavelet function such that
   \\\indentx$\ds\inprod{\fpsi(x)}{x^n}=0 \qquad\text{for}\quad n=0,1,2,\ldots,p-1.$\\
 This chapter investigates wavelet design under the vanishing moment constraint.
@@ -23,7 +23,7 @@ This chapter investigates wavelet design under the vanishing moment constraint.
 \footnote{
   \citerpp{jawerth}{16}{17},
   \citerp{sweldens93}{2},
-  \citerp{vidakovic}{83}  
+  \citerp{vidakovic}{83}
   %\citerp{goswami}{102}    \\
   %\citerpp{mallat}{241}{243}
   }
@@ -50,13 +50,13 @@ Let $M_n$ be the \fncte{$n$th moment} \xref{def:Mn} of a function $\ff(x)\in\spL
 \end{definition}
 
 Let $\wavsys$ be a \structe{wavelet system} \xref{def:wavsys}.
-Let $\opP$ be the \fncte{projection operator} that generates the subspace $\spV_0$ 
+Let $\opP$ be the \fncte{projection operator} that generates the subspace $\spV_0$
 and $\opQ$ the \fncte{projection operator} that generates the subspace $\spW_0$.
 The number of {\em vanishing moments} of a wavelet is important
 when using wavelets for the analysis and synthesis of a function $\ff(x)$ as in
 \[ \ff(x) =
    \mcom{
-     \sum_{n\in\Z} \mcom{\inprod{\ff(x)}{\opTrn^n\fphi(x)}}{Fourier coefficient} \opTrn^n\fphi(x) 
+     \sum_{n\in\Z} \mcom{\inprod{\ff(x)}{\opTrn^n\fphi(x)}}{Fourier coefficient} \opTrn^n\fphi(x)
      }{\structe{Fourier expansion} \xref{def:fex} of $\opP\ff(x)$}
    +
    \mcom{
@@ -118,7 +118,7 @@ Let $\Dh(\omega)$ and $\Dg(\omega)$ be the \fncte{DTFT}s \xref{def:dtft} of $\se
     (A) & \mcom{\inprod{\fpsi(x)}{x^n}=0}{$\fpsi(x)$ has a vanishing $n$th moment}
       &\iff&
     \left.\opddwn  \Fpsi(\omega)\right|_{\omega=0} &=& 0         &(B)
-      \\&&\iff&                                                              
+      \\&&\iff&
     \left.\opddwn  \Dg(\omega)\right|_{\omega=0}   &=& 0         & (C)
       \\&&\iff&
     \sum_{k\in\Z} k^n  g_n &=& 0 & (D)
@@ -140,10 +140,10 @@ Let $\Dh(\omega)$ and $\Dg(\omega)$ be the \fncte{DTFT}s \xref{def:dtft} of $\se
       \\&= \left.\sum_{k=0}^n {n \choose k} \Dg^{(k)}(\omega)\Fphi^{(n-k)}(\omega)\right|_{\omega=0}
         && \text{by \thme{Leibnitz GPR}}
         && \text{\xref{lem:LGPR}}
-      \\&= \left[
+      \\&= \brs{
            \Dg^{(n)}(\omega)\Fphi(\omega)
            +\sum_{k=0}^{n-1} {n \choose k} \Dg^{(k)}(\omega)\Fphi^{(n-k)}(\omega)
-           \right]_{\omega=0}
+           }_{\omega=0}
       \\&= \Dg^{(n)}(0) \Fphi(0)
            +\sum_{k=0}^{n-1} {n \choose k} \Dg^{(k)}(0)\Fphi^{(n-k)}(0)
     \end{align*}
@@ -160,7 +160,7 @@ Let $\Dh(\omega)$ and $\Dg(\omega)$ be the \fncte{DTFT}s \xref{def:dtft} of $\se
     \implies&  \Dg^{(n)}(0) &=& 0  & \text{for $n=0,1,2,\ldots$}
   \end{array}\]
 
-  \item Proof that $(B)\impliedby(C)$: 
+  \item Proof that $(B)\impliedby(C)$:
     \begin{align*}
       \left.\opddwn  \Fpsi(2\omega)\right|_{\omega=0}
         &= \left.\opddwn  \Dg(\omega)\Fphi(\omega)\right|_{\omega=0}
@@ -199,7 +199,7 @@ Let $\Dh(\omega)$ and $\Dg(\omega)$ be the \fncte{DTFT}s \xref{def:dtft} of $\se
 Let $\wavsys$ be a wavelet system and $M_n$ the \hie{$n$th moment} \xref{def:Mn} of $\fphi(x)$.
 \lembox{
   \left.\opddwn  \Dh(\omega)\right|_{\omega=\pi}=0
-  \qquad\implies\qquad 
+  \qquad\implies\qquad
   \left.\opddwn  \Fphi(\omega)\right|_{\omega=2\pi k}= \cft(-i)M_n\delta_k
   }
 \end{lemma}
@@ -210,14 +210,14 @@ Let $\wavsys$ be a wavelet system and $M_n$ the \hie{$n$th moment} \xref{def:Mn}
   \item Then,
     \begin{align*}
         \left. \opddwn  \Fphi(\omega)                           \right|_{\omega=2\pi k}
-          &= \left. \opddwn  
-                   \Dh\left(\frac{\omega}{2}\right) 
-                   \Fphi\left(\frac{\omega}{2}\right) 
+          &= \left. \opddwn
+                   \Dh\left(\frac{\omega}{2}\right)
+                   \Fphi\left(\frac{\omega}{2}\right)
              \right|_{\omega=2\pi k}
           && \text{by \prefp{prop:vsmra_real_Fpsi}}
-        \\&= \left. \sum_{m=0}^n {n\choose m} 
+        \\&= \left. \sum_{m=0}^n {n\choose m}
                     \Dh  ^{(m  )}\left(\frac{\omega}{2}\right)
-                    \Fphi^{(n-m)}\left(\frac{\omega}{2}\right) 
+                    \Fphi^{(n-m)}\left(\frac{\omega}{2}\right)
              \right|_{\omega=2\pi k}
         && \text{by \thme{Leibnitz GPR}}
         && \text{\xref{lem:LGPR}}
@@ -235,19 +235,19 @@ Let $\wavsys$ be a wavelet system and $M_n$ the \hie{$n$th moment} \xref{def:Mn}
         \\
         \Fphi^{(n)}(2\pi1) &= 0
         \\
-        \Fphi^{(n)}(2\pi2) 
+        \Fphi^{(n)}(2\pi2)
           &= \ds \sum_{m=0}^n {n\choose m} \Dh^{(m)}(2\pi1) \mcom{\Fphi^{(n-m)}(2\pi1)}{$0$}
            = 0
         \\
         \Fphi^{(n)}(2\pi3) &= 0
         \\
-        \Fphi^{(n)}(2\pi4) 
+        \Fphi^{(n)}(2\pi4)
           &= \ds \sum_{m=0}^n {n\choose m} \Dh^{(m)}(2\pi2) \mcom{\Fphi^{(n-m)}(2\pi2)}{$0$}
            = 0
         \\
         \Fphi^{(n)}(2\pi5) &= 0
         \\
-        \Fphi^{(n)}(2\pi6) 
+        \Fphi^{(n)}(2\pi6)
           &= \ds \sum_{m=0}^n {n\choose m} \Dh^{(m)}(2\pi3) \mcom{\Fphi^{(n-m)}(2\pi3)}{$0$}
            = 0
         \\
@@ -263,7 +263,7 @@ Let $\wavsys$ be a wavelet system and $M_n$ the \hie{$n$th moment} \xref{def:Mn}
 
 
 
-%\prefpp{thm:vanish} gives alternative forms for expressing 
+%\prefpp{thm:vanish} gives alternative forms for expressing
 %the property of vanishing moments of a wavelet.
 %The \structe{CQF} \xref{def:cqf} constraint on the \structe{wavelet coefficients} \xref{def:gn}
 %establishes a relationship between wavelets and their associated scaling functions. % ($\spV_0\perp\spW_0$).
@@ -307,26 +307,26 @@ Let $\Dh(\omega)$ and $\Dg(\omega)$ be the \ope{DTFT}s \xref{def:dtft} of $\seqn
 
   \item Proof that $(2) \iff (3)$: by \prefp{thm:cqf_ddw}
 
-  %\item Proof that $(2) \implies (3)$: 
+  %\item Proof that $(2) \implies (3)$:
   %\item lemma: Proof that $\Dg(\pi)=\sqrt{2}$: \label{item:gh_cqf_Fgpi} % proof moved to wavstruct
   %\item Proof that $(2) \implies (3)$: % note: this requires orthogonality
   %  \begin{align*}
   %      0
   %        &= \left. \opddwn  \; 0 \right|_{\omega=\pi}
   %      \\&= \left. \opddwn  \; 2\Shs(\omega) \right|_{\omega=\pi}
-  %        && \text{by (B) and \prefp{lem:Swfgo}} 
-  %      \\&= \left. \opddwn  \left[
+  %        && \text{by (B) and \prefp{lem:Swfgo}}
+  %      \\&= \left. \opddwn  \brs{
   %           \Dh(\omega)\Dg^\ast(\omega)\Sphi(\omega)+\Dh(\omega+\pi)\Dg^\ast(\omega+\pi)\Sphi(\omega)
-  %           \right]\right|_{\omega=\pi}
-  %        && \text{by \prefp{thm:gen_quadcon}} 
-  %      \\&= \left. \opddwn  \left[
+  %           }\right|_{\omega=\pi}
+  %        && \text{by \prefp{thm:gen_quadcon}}
+  %      \\&= \left. \opddwn  \brs{
   %           \Dh(\omega)\Dg^\ast(\omega)+\Dh(\omega+\pi)\Dg^\ast(\omega+\pi)
-  %           \right]\right|_{\omega=\pi}
-  %        && \text{by (A) and \prefp{lem:Swfgo}} 
-  %      \\&= \left.\left[
+  %           }\right|_{\omega=\pi}
+  %        && \text{by (A) and \prefp{lem:Swfgo}}
+  %      \\&= \left.\brs{
   %           \sum_{k=0}^n {n\choose k} \Dh^{(k)}(\omega)\Dg^{(n-k)\ast}(\omega)
   %          +\sum_{k=0}^n {n\choose k} \Dh^{(k)}(\omega+\pi)\Dg^{(n-k)\ast}(\omega+\pi)
-  %           \right]\right|_{\omega=\pi}
+  %           }\right|_{\omega=\pi}
   %        && \text{by Leibnitz GPR \prefpo{lem:LGPR}}
   %      \\&= \sum_{k=0}^n {n\choose k} \Dh^{(k)}(\pi)\Dg^{(n-k)\ast}(\pi)
   %          +\sum_{k=0}^n {n\choose k} \Dh^{(k)}(0)\Dg^{(n-k)\ast}(0)
@@ -368,15 +368,15 @@ Let $\Dh(\omega)$ and $\Dg(\omega)$ be the \ope{DTFT}s \xref{def:dtft} of $\seqn
   %                 \Dh(\omega)\Dg^\ast(\omega)+\Dh(\omega+\pi)\Dg^\ast(\omega+\pi)
   %                 }}_{\omega=0}
   %            && \text{by (A) and \prefp{lem:Swfgo}} %{; see also \prefp{thm:quadcon}}
-  %          \\&= \left.\left[
+  %          \\&= \left.\brs{
   %               \sum_{k=0}^n {n\choose k} \Dh^{(k)}(\omega)\Dg^{(n-k)\ast}(\omega)
   %              +\sum_{k=0}^n {n\choose k} \Dh^{(k)}(\omega+\pi)\Dg^{(n-k)\ast}(\omega+\pi)
-  %               \right]\right|_{\omega=0}
+  %               }\right|_{\omega=0}
   %            && \text{by Leibnitz GPR \prefpo{lem:LGPR}}
-  %          \\&= \left.\left[
+  %          \\&= \left.\brs{
   %               \sum_{k=0}^n {n\choose k} \Dh^{(k)}(\omega)\Dg^{(n-k)\ast}(\omega)
   %              +\sum_{k=0}^n {n\choose k} \;0\;\Dg^{(n-k)\ast}(\omega+\pi)
-  %               \right]\right|_{\omega=0}
+  %               }\right|_{\omega=0}
   %            && \text{by (3)}
   %          \\&= \left.
   %               \sum_{k=0}^n {n\choose k} \Dh^{(k)}(\omega)\Dg^{(n-k)\ast}(\omega)
@@ -396,7 +396,7 @@ Let $\Dh(\omega)$ and $\Dg(\omega)$ be the \ope{DTFT}s \xref{def:dtft} of $\seqn
   %      \implies & \Dg^{(3)}(0) &=& 0   \\
   %      \implies & \Dg^{(4)}(0) &=& 0   \\
   %      \vdots   & \mc{1}{c}{\vdots}    \\
-  %      \implies & \Dg^{(n)}(0) &=& 0  
+  %      \implies & \Dg^{(n)}(0) &=& 0
   %    \end{array}\]
 
 
@@ -427,8 +427,8 @@ with $p$ vanishing moments has $p$ zeros at $z=-1$
 %=======================================
 Linear combinations of $\setxZ{\opTrn^n\fphi(x)}$ of a wavelet system with $p$ vanishing moments
 can perfectly represent any polynomial of order $p-1$ or less \xref{thm:sfix_poly}.
-%The key to proving this is the \prope{Strang-Fix condition} \xref{lem:sfixceq}. 
-\prefp{ex:sfixc5} illustrates this using the Strang-Fix condition \xref{lem:sfixc}  
+%The key to proving this is the \prope{Strang-Fix condition} \xref{lem:sfixceq}.
+\prefp{ex:sfixc5} illustrates this using the Strang-Fix condition \xref{lem:sfixc}
 to represent any polynomial of dgree $4$ or less.
 %--------------------------------------
 \begin{lemma} %[\thmd{Strang-Fix condition}]
@@ -474,9 +474,9 @@ Let $\wavsys$ be a wavelet system and $M_n$ the \hie{$n$th moment} \xref{def:Mn}
         &&        \text{\xref{lem:sfixceq}}
     \end{align*}
 
-  %\item Proof that 
+  %\item Proof that
   %  $\left.\opddwn  \Dh(\omega)\right|_{\omega=\pi}=0
-  %   \implies 
+  %   \implies
   %   \left.\opddwn  \Fphi(\omega)\right|_{\omega=2\pi k}=0
   %  $:
   %  \begin{align*}
@@ -486,20 +486,20 @@ Let $\wavsys$ be a wavelet system and $M_n$ the \hie{$n$th moment} \xref{def:Mn}
   %      \\&= \left. \cft \int_\R \fphi(x)\opddwn  e^{-i\omega x} \dx \right|_{\omega=0}
   %      \\&= \left. \cft \int_\R \fphi(x) (-it)^n e^{-i\omega x} \dx             \right|_{\omega=0}
   %      \\&= \left. \cft (-i)^n \int_\R x^n \fphi(x) e^{-i\omega x} \dx          \right|_{\omega=0}
-  %      \\&= \cft (-i)^n \int_\R x^n \fphi(x) \dx  
+  %      \\&= \cft (-i)^n \int_\R x^n \fphi(x) \dx
   %      \\&= \cft (-i)^n M_n
-  %        && \text{by definition of $M_n$}  
+  %        && \text{by definition of $M_n$}
   %      \\
   %      \\
   %      \left. \opddwn  \Fphi(\omega)                           \right|_{\omega=2\pi k}
-  %        &= \left. \opddwn  
-  %                 \Dh\left(\frac{\omega}{2}\right) 
-  %                 \Fphi\left(\frac{\omega}{2}\right) 
+  %        &= \left. \opddwn
+  %                 \Dh\left(\frac{\omega}{2}\right)
+  %                 \Fphi\left(\frac{\omega}{2}\right)
   %           \right|_{\omega=2\pi k}
   %        && \text{by \prefp{prop:vsmra_real_Fpsi}}
-  %      \\&= \left. \sum_{m=0}^n {n\choose m} 
+  %      \\&= \left. \sum_{m=0}^n {n\choose m}
   %                  \Dh  ^{(m  )}\left(\frac{\omega}{2}\right)
-  %                  \Fphi^{(n-m)}\left(\frac{\omega}{2}\right) 
+  %                  \Fphi^{(n-m)}\left(\frac{\omega}{2}\right)
   %           \right|_{\omega=2\pi k}
   %        && \text{by Leibnitz GPR \prefpo{lem:LGPR}}
   %      \\&= \sum_{m=0}^n {n\choose m} \mcom{\Dh^{(m)}(\pi k)}{0 for $k$ odd} \Fphi^{(n-m)}(\pi k)
@@ -515,19 +515,19 @@ Let $\wavsys$ be a wavelet system and $M_n$ the \hie{$n$th moment} \xref{def:Mn}
   %      \\
   %      \Fphi^{(n)}(2\pi1) &= 0
   %      \\
-  %      \Fphi^{(n)}(2\pi2) 
+  %      \Fphi^{(n)}(2\pi2)
   %        &= \ds \sum_{m=0}^n {n\choose m} \Dh^{(m)}(2\pi1) \mcom{\Fphi^{(n-m)}(2\pi1)}{$0$}
   %         = 0
   %      \\
   %      \Fphi^{(n)}(2\pi3) &= 0
   %      \\
-  %      \Fphi^{(n)}(2\pi4) 
+  %      \Fphi^{(n)}(2\pi4)
   %        &= \ds \sum_{m=0}^n {n\choose m} \Dh^{(m)}(2\pi2) \mcom{\Fphi^{(n-m)}(2\pi2)}{$0$}
   %         = 0
   %      \\
   %      \Fphi^{(n)}(2\pi5) &= 0
   %      \\
-  %      \Fphi^{(n)}(2\pi6) 
+  %      \Fphi^{(n)}(2\pi6)
   %        &= \ds \sum_{m=0}^n {n\choose m} \Dh^{(m)}(2\pi3) \mcom{\Fphi^{(n-m)}(2\pi3)}{$0$}
   %         = 0
   %      \\
@@ -547,11 +547,11 @@ Let $\wavsys$ be a wavelet system and $M_n$ the \hie{$n$th moment} \xref{def:Mn}
 %---------------------------------------
 Let $\wavsys$ be a wavelet system with $p$ vanishing moments.
 Let $\fq(x)$ be a \fncte{polynomial}.
-Let 
+Let
   \\\indentx$\setQ_p\eqd\set{\fq(x)}{\text{$\fq(x)$ is a \fncte{polynomial} of order $p-1$ or less}}$.\\
 \thmbox{
   \brb{\begin{array}{FMD}
-    1. & $\fpsi$ has $p$ vanishing\\ 
+    1. & $\fpsi$ has $p$ vanishing\\
        & moments                     & and \\
     2. & $\fq(x)$ is of order $p-1$
   \end{array}}
@@ -570,7 +570,7 @@ See \prefp{ex:sfixc5}.
 \end{proof}
 
 %---------------------------------------
-\begin{example} 
+\begin{example}
 \label{ex:sfixc5}
 %---------------------------------------
 Let $\wavsys$ be a \structe{wavelet system} \xref{def:wavsys} in which
@@ -592,51 +592,51 @@ $\fpsi(x)$ has $5$ vanishing moments.
 
 These equations can be represented in matrix algebra form as
 \exbox{
-  \left[\begin{array}{l}
+  \brs{\begin{array}{>{\ds}l}
     \sum_{k\in\Z} k^4 \fphi(x-k) \\
     \sum_{k\in\Z} k^3 \fphi(x-k) \\
     \sum_{k\in\Z} k^2 \fphi(x-k) \\
     \sum_{k\in\Z} k   \fphi(x-k) \\
     \sum_{k\in\Z}     \fphi(x-k)
-  \end{array}\right]
+  \end{array}}
   =
-  \left[\begin{array}{rrrrr}
+  \brs{\begin{array}{rrrrr}
     M_0 & -4M_1 &  6M_2 & -4M_3 &  M_4 \\
       0 &   M_0 & -3M_1 &  3M_2 & -M_3 \\
-      0 &     0 &   M_0 & -2M_1 &  M_2 \\ 
+      0 &     0 &   M_0 & -2M_1 &  M_2 \\
       0 &     0 &     0 &   M_0 & -M_1 \\
-      0 &     0 &     0 &     0 &  M_0  
-  \end{array}\right]
-  \left[\begin{array}{l}
+      0 &     0 &     0 &     0 &  M_0
+  \end{array}}
+  \brs{\begin{array}{l}
     x^4 \\
     x^3 \\
     x^2 \\
     x   \\
-    1   
-  \end{array}\right]
+    1
+  \end{array}}
   }
 
-The operator matrix is triagular and therefore it's inverse 
+The operator matrix is triangular and therefore it's inverse
 always exists.
-The monomials $1, x, x^2, x^3$ and $x^4$ can be computed by 
+The monomials $1, x, x^2, x^3$ and $x^4$ can be computed by
 computing the inverse of the operator matrix.
-\exbox{\begin{array}{lclclclclclcl}
-  1   &=& \frac{1}{M_0} \sum_{k\in\Z} \fphi(x-k)                     
+\exbox{\begin{array}{*{7}{>{\ds}l>{\ds}c}}
+  1   &=& \frac{1}{M_0} \sum_{k\in\Z} \fphi(x-k)
   \\
-  x   &=& \frac{1}{M_0}\sum_{k\in\Z} k \fphi(x-k) 
-      &+& \frac{M_1}{M_0}  
+  x   &=& \frac{1}{M_0}\sum_{k\in\Z} k \fphi(x-k)
+      &+& \frac{M_1}{M_0}
   \\
-  x^2 &=& \frac{1}{M_0}\sum_{k\in\Z} k^2 \fphi(x-k) 
-      &+& \frac{2M_1}{M_0^2}\sum_{k\in\Z} k \fphi(x-k) 
+  x^2 &=& \frac{1}{M_0}\sum_{k\in\Z} k^2 \fphi(x-k)
+      &+& \frac{2M_1}{M_0^2}\sum_{k\in\Z} k \fphi(x-k)
       &+& \frac{2M_1^2-M_2M_0}{M_0^2}
   \\
-  x^3 &=& \frac{1}{M_0}\sum_{k\in\Z} k^3 \fphi(x-k) 
-      &+& \frac{3M_1 }{M_0^2}\sum_{k\in\Z} k^2 \fphi(x-k) 
-      &+& \frac{6M_1^2-3M_2M_0}{M_0^3}\sum_{k\in\Z} k \fphi(x-k) 
+  x^3 &=& \frac{1}{M_0}\sum_{k\in\Z} k^3 \fphi(x-k)
+      &+& \frac{3M_1 }{M_0^2}\sum_{k\in\Z} k^2 \fphi(x-k)
+      &+& \frac{6M_1^2-3M_2M_0}{M_0^3}\sum_{k\in\Z} k \fphi(x-k)
       \\&&\qquad&+& \frac{6M_1^3-6M_2M_1M_0+M_3M_0^2}{M_0^3}
 \end{array}}
 \\
-Note that each monomial $x^n$ is simply a linear combination 
+Note that each monomial $x^n$ is simply a linear combination
 of $\seq{\fphi(x-k)}{k\in\Z}$.
 
 \end{footnotesize}
@@ -663,16 +663,16 @@ of $\seq{\fphi(x-k)}{k\in\Z}$.
   \\
   M_3
     &= \sum_{k\in\Z} (x-k)^3 \fphi(x-k)
-  \\&=  x^3 \sum_{k\in\Z}     \fphi(x-k) 
-      - 3x^2 \sum_{k\in\Z} k   \fphi(x-k) 
-      + 3x   \sum_{k\in\Z} k^2 \fphi(x-k) 
-      -      \sum_{k\in\Z} k^3 \fphi(x-k) 
+  \\&=  x^3 \sum_{k\in\Z}     \fphi(x-k)
+      - 3x^2 \sum_{k\in\Z} k   \fphi(x-k)
+      + 3x   \sum_{k\in\Z} k^2 \fphi(x-k)
+      -      \sum_{k\in\Z} k^3 \fphi(x-k)
   \\&=  x^3 M_0
-      - 3x^2 \left[ M_0t - M_1 \right]
-      + 3x   \left[ M_0x^2 - 2M_1x + M_2 \right]
-      -      \sum_{k\in\Z} k^3 \fphi(x-k) 
-  \\&= (M_0-3M_0+3M_0)x^3 + (3M_1-6M_1)x^2 + 3M_2 x -\sum_{k\in\Z} k^3 \fphi(x-k) 
-  \\&= M_0x^3 -3M_1 x^2 + 3M_2t - \sum_{k\in\Z} k^3 \fphi(x-k) 
+      - 3x^2 \brs{ M_0t - M_1 }
+      + 3x   \brs{ M_0x^2 - 2M_1x + M_2 }
+      -      \sum_{k\in\Z} k^3 \fphi(x-k)
+  \\&= (M_0-3M_0+3M_0)x^3 + (3M_1-6M_1)x^2 + 3M_2 x -\sum_{k\in\Z} k^3 \fphi(x-k)
+  \\&= M_0x^3 -3M_1 x^2 + 3M_2t - \sum_{k\in\Z} k^3 \fphi(x-k)
   \\
   \\
   M_4
@@ -683,21 +683,21 @@ of $\seq{\fphi(x-k)}{k\in\Z}$.
       - 4x   \sum_{k\in\Z} k^3 \fphi(x-k)
       +      \sum_{k\in\Z} k^4 \fphi(x-k)
   \\&=  x^4 M_0
-      - 4x^3 \left[ M_0t   -  M_1  \right]
-      + 6x^2 \left[ M_0x^2 - 2M_1x   + M_2  \right]
-      - 4x   \left[ M_0x^3 - 3M_1x^2 + 3M_2t - M_3  \right]
+      - 4x^3 \brs{ M_0t   -  M_1  }
+      + 6x^2 \brs{ M_0x^2 - 2M_1x   + M_2  }
+      - 4x   \brs{ M_0x^3 - 3M_1x^2 + 3M_2t - M_3  }
       \\&\qquad+      \sum_{k\in\Z} k^4 \fphi(x-k)
   \\&=  x^4 M_0
-      + \left[ - 4M_0x^4   + 4M_1x^3  \right]
-      + \left[ 6M_0x^4 - 12M_1x^3  + 6M_2x^2  \right]
-      \\&\qquad+ \left[ - 4M_0x^4 + 12M_1x^3 - 12M_2x^2 + 4M_3x  \right]
+      + \brs{ - 4M_0x^4   + 4M_1x^3  }
+      + \brs{ 6M_0x^4 - 12M_1x^3  + 6M_2x^2  }
+      \\&\qquad+ \brs{ - 4M_0x^4 + 12M_1x^3 - 12M_2x^2 + 4M_3x  }
       +  \sum_{k\in\Z} k^4 \fphi(x-k)
-  \\&= (M_0- 4M_0+6M_0- 4M_0)x^4 
+  \\&= (M_0- 4M_0+6M_0- 4M_0)x^4
       + (4M_1- 12M_1+ 12M_1)x^3
       + (6M_2-12M_2)x^2
       + 4M_3x
       \\&\qquad+ \sum_{k\in\Z} k^4 \fphi(x-k)
-  \\&= -M_0x^4 
+  \\&= -M_0x^4
       + 4M_1x^3
       - 6M_2x^2
       + 4M_3x
@@ -713,16 +713,16 @@ of $\seq{\fphi(x-k)}{k\in\Z}$.
       \\&\qquad+ 5t   \sum_{k\in\Z} k^4 \fphi(x-k)
       -      \sum_{k\in\Z} k^5 \fphi(x-k)
   \\&=  x^5 M_0
-      - 5x^4 \left[ M_0x-M_1                 \right]
-      +10x^3 \left[ M_0x^2-2M_1x+M_2         \right]
-      -10x^2 \left[ M_0x^3-3M_1x^2+3M_2x-M_3 \right]
-      \\&\qquad+ 5t   \left[ M_0x^4-4M_1x^3+6M_2x^2-4M_3x+M_4 \right]
+      - 5x^4 \brs{ M_0x-M_1                 }
+      +10x^3 \brs{ M_0x^2-2M_1x+M_2         }
+      -10x^2 \brs{ M_0x^3-3M_1x^2+3M_2x-M_3 }
+      \\&\qquad+ 5t   \brs{ M_0x^4-4M_1x^3+6M_2x^2-4M_3x+M_4 }
       -      \sum_{k\in\Z} k^5 \fphi(x-k)
   \\&=  x^5 M_0
-      \left[ -5M_0x^5+5M_1x^4                 \right]
-      + \left[ 10M_0x^5 -20M_1x^4 + 10M_2x^3  \right]
-      \\&\qquad+ \left[ -10M_0x^5 +30M_1x^4 -30M_2x^3 +10M_3x^2 \right]
-      \\&\qquad+ \left[ 5M_0x^5 - 20M_1x^4 +30M_2x^3 - 20M_3x^2 +5M_4x \right]
+      \brs{ -5M_0x^5+5M_1x^4                 }
+      + \brs{ 10M_0x^5 -20M_1x^4 + 10M_2x^3  }
+      \\&\qquad+ \brs{ -10M_0x^5 +30M_1x^4 -30M_2x^3 +10M_3x^2 }
+      \\&\qquad+ \brs{ 5M_0x^5 - 20M_1x^4 +30M_2x^3 - 20M_3x^2 +5M_4x }
       - \sum_{k\in\Z} k^5 \fphi(x-k)
   \\&= (M_0-5M_0+10M_0+5M_0-10M_0)x^5
        +(5M_1-20M_1+30M_1-20M_1)x^4
@@ -730,7 +730,7 @@ of $\seq{\fphi(x-k)}{k\in\Z}$.
        +(10M_3-20M_3)x^2
        + 5M_4x
       - \sum_{k\in\Z} k^5 \fphi(x-k)
-  \\&= M_0x^5 - 5M_1x^4 + 10M_2x^3 - 10M_3x^2 + 5M_4x 
+  \\&= M_0x^5 - 5M_1x^4 + 10M_2x^3 - 10M_3x^2 + 5M_4x
       - \sum_{k\in\Z} k^5 \fphi(x-k)
 \end{align*}
 
@@ -738,57 +738,57 @@ of $\seq{\fphi(x-k)}{k\in\Z}$.
 %  \begin{array}{rr|rrrr@{\hspace{8ex}}rrrr|c}
   \begin{array}{rr|rrrr@{\hspace{3ex}\hspace{3ex}}rrrr|c}
     && M_0 & -3M_1 &  3M_2 & -M_3  & 1 & 0 & 0 & 0 &             \\
-    &&   0 &   M_0 & -2M_1 &  M_2  & 0 & 1 & 0 & 0 & \rightarrow \\ 
+    &&   0 &   M_0 & -2M_1 &  M_2  & 0 & 1 & 0 & 0 & \rightarrow \\
     &&   0 &     0 &   M_0 & -M_1  & 0 & 0 & 1 & 0 &             \\
-    &&   0 &     0 &     0 &  M_0  & 0 & 0 & 0 & 1 & 
+    &&   0 &     0 &     0 &  M_0  & 0 & 0 & 0 & 1 &
     \\ \\
     && M_0 & -3M_1 &  3M_2 &    0  & 1 & 0 & 0 &  \frac{M_3}{M_0} &             \\
     &&   0 &   M_0 & -2M_1 &    0  & 0 & 1 & 0 & -\frac{M_2}{M_0} & \rightarrow \\
     &&   0 &     0 &   M_0 &    0  & 0 & 0 & 1 &  \frac{M_1}{M_0} &             \\
-    &&   0 &     0 &     0 &  M_0  & 0 & 0 & 0 &  1               &               
+    &&   0 &     0 &     0 &  M_0  & 0 & 0 & 0 &  1               &
     \\ \\
     && M_0 & -3M_1 &     0 &    0  & 1 & 0 & -\frac{3M_2}{M_0} & -\frac{3M_2M_1}{M_0^2}+\frac{M_3}{M_0} &             \\
     &&   0 &   M_0 &     0 &    0  & 0 & 1 &  \frac{2M_1}{M_0} & \frac{2M_1^2}{M_0^2}-\frac{M_2}{M_0}   & \rightarrow \\
     &&   0 &     0 &   M_0 &    0  & 0 & 0 &  1                &  \frac{M_1}{M_0}                       &             \\
-    &&   0 &     0 &     0 &  M_0  & 0 & 0 &  0                &  1                                     &               
+    &&   0 &     0 &     0 &  M_0  & 0 & 0 &  0                &  1                                     &
     \\ \\
     && M_0 &     0 &     0 &    0  & 1 & \frac{3M_1}{M_0} & \frac{6M_1^2}{M_0^2}-\frac{3M_2}{M_0} & \frac{6M_1^3}{M_0^3}-\frac{3M_1M_2}{M_0^2} - \frac{3M_2M_1}{M_0^2}+\frac{M_3}{M_0} &             \\
     &&   0 &   M_0 &     0 &    0  & 0 & 1                &  \frac{2M_1}{M_0}                     & \frac{2M_1^2}{M_0^2}-\frac{M_2}{M_0}                                               & \rightarrow \\
     &&   0 &     0 &   M_0 &    0  & 0 & 0                &  1                                    & \frac{M_1}{M_0}                                                                    &             \\
-    &&   0 &     0 &     0 &  M_0  & 0 & 0                &  0                                    & 1                                                                                  &               
+    &&   0 &     0 &     0 &  M_0  & 0 & 0                &  0                                    & 1                                                                                  &
     \\ \\
     &&   1 &     0 &     0 &    0  & \frac{1}{M_0} & \frac{3M_1}{M_0^2} & \frac{6M_1^2}{M_0^3}-\frac{3M_2}{M_0^2} & \frac{6M_1^3}{M_0^4}-\frac{3M_1M_2}{M_0^3} - \frac{3M_2M_1}{M_0^3}+\frac{M_3}{M_0^2} &             \\
     &&   0 &     1 &     0 &    0  & 0 & \frac{1}{M_0}    &  \frac{2M_1}{M_0^2}                     & \frac{2M_1^2}{M_0^3}-\frac{M_2}{M_0^2}                                                             & \rightarrow \\
     &&   0 &     0 &     1 &    0  & 0 & 0                &  \frac{1}{M_0}                          & \frac{M_1}{M_0^2}                                                                                  &             \\
-    &&   0 &     0 &     0 &    1  & 0 & 0                &  0                                    & \frac{1}{M_0}                                                                                        &               
+    &&   0 &     0 &     0 &    1  & 0 & 0                &  0                                    & \frac{1}{M_0}                                                                                        &
     \\ \\
     &&   1 &     0 &     0 &    0  & \frac{1}{M_0} & \frac{3M_1}{M_0^2} & \frac{6M_1^2-3M_2M_0}{M_0^3} & \frac{6M_1^3-6M_2M_1M_0+M_3M_0^2}{M_0^4}  &             \\
     &&   0 &     1 &     0 &    0  & 0 & \frac{1}{M_0}    &  \frac{2M_1}{M_0^2}                     & \frac{2M_1^2-M_2M_0}{M_0^3}                  & \rightarrow \\
     &&   0 &     0 &     1 &    0  & 0 & 0                &  \frac{1}{M_0}                          & \frac{M_1}{M_0^2}                            &             \\
-    &&   0 &     0 &     0 &    1  & 0 & 0                &  0                                    & \frac{1}{M_0}                                  &             
+    &&   0 &     0 &     0 &    1  & 0 & 0                &  0                                    & \frac{1}{M_0}                                  &
   \end{array}
 \end{math}
 
 \begin{eqnarray*}
-  \left[\begin{array}{l}
+  \brs{\begin{array}{l}
     x^3  \\
     x^2  \\
     x    \\
-    1   
-  \end{array}\right]
-  &=& 
-  \left[\begin{array}{llll}
+    1
+  \end{array}}
+  &=&
+  \brs{\begin{array}{llll}
     \frac{1}{M_0} & \frac{3M_1}{M_0^2} & \frac{6M_1^2-3M_2M_0}{M_0^3} & \frac{6M_1^3-6M_2M_1M_0+M_3M_0^2}{M_0^4}  \\
     0 & \frac{1}{M_0}    &  \frac{2M_1}{M_0^2}                     & \frac{2M_1^2-M_2M_0}{M_0^3}                  \\
     0 & 0                &  \frac{1}{M_0}                          & \frac{M_1}{M_0^2}                            \\
-    0 & 0                &  0                                    & \frac{1}{M_0}                                  
-  \end{array}\right]
-  \left[\begin{array}{l}
+    0 & 0                &  0                                    & \frac{1}{M_0}
+  \end{array}}
+  \brs{\begin{array}{l}
     \sum_{k\in\Z} k^3 \fphi(x-k)  \\
     \sum_{k\in\Z} k^2 \fphi(x-k)  \\
     \sum_{k\in\Z} k   \fphi(x-k)  \\
     \sum_{k\in\Z}     \fphi(x-k)  \\
-  \end{array}\right]
+  \end{array}}
 \end{eqnarray*}
 
 
@@ -796,17 +796,17 @@ of $\seq{\fphi(x-k)}{k\in\Z}$.
   x^3 &=  \frac{1}{M_0}                            \sum_{k\in\Z} k^3 \fphi(x-k)
        +  \frac{3M_1}{M_0^2}                       \sum_{k\in\Z} k^2 \fphi(x-k)
        +  \frac{6M_1^2-3M_2M_0}{M_0^3}             \sum_{k\in\Z} k   \fphi(x-k)
-    \\& + \frac{6M_1^3-6M_2M_1M_0+M_3M_0^2}{M_0^4} 
+    \\& + \frac{6M_1^3-6M_2M_1M_0+M_3M_0^2}{M_0^4}
           \mcom{\sum_{k\in\Z} \fphi(x-k)}{$M_0$}
     \\&=  \frac{1}{M_0}                            \sum_{k\in\Z} k^3 \fphi(x-k)
        +  \frac{3M_1}{M_0^2}                       \sum_{k\in\Z} k^2 \fphi(x-k)
        +  \frac{6M_1^2-3M_2M_0}{M_0^3}             \sum_{k\in\Z} k   \fphi(x-k)
-    \\&\qquad+ \frac{6M_1^3-6M_2M_1M_0+M_3M_0^2}{M_0^3} 
+    \\&\qquad+ \frac{6M_1^3-6M_2M_1M_0+M_3M_0^2}{M_0^3}
 \\
-  x^2 &= 
-      \frac{1}{M_0}                \sum_{k\in\Z} k^2 \fphi(x-k) 
-     +\frac{2M_1}{M_0^2}           \sum_{k\in\Z}     \fphi(x-k) 
-     +\frac{2M_1^2-M_2M_0}{M_0^2} 
+  x^2 &=
+      \frac{1}{M_0}                \sum_{k\in\Z} k^2 \fphi(x-k)
+     +\frac{2M_1}{M_0^2}           \sum_{k\in\Z}     \fphi(x-k)
+     +\frac{2M_1^2-M_2M_0}{M_0^2}
 \\
   x &=  \frac{1}{M_0}\sum_{k\in\Z} k \fphi(x-k) + \frac{M_1}{M_0}
 \end{align*}
@@ -819,36 +819,36 @@ of $\seq{\fphi(x-k)}{k\in\Z}$.
 \footnote{
   %\citeoeis{A110555}
   \citeOc{oeisA110555}{A110555}{$T(n,k) \eqd \sum_{k=0,1,\ldots,n}{n\choose k}(-1)^k$}
-  } 
+  }
 \label{cnj:sfixc}
 %---------------------------------------
 Let $\wavsys$ be a wavelet system with $p$ vanishing moments
 and let $M_n$ be the \hi{$n$th moment} \xref{def:Mn} of $\fphi(x)$.
 \cnjbox{
-  \sum_{k\in\Z} k^n \fphi(x-k) 
+  \sum_{k\in\Z} k^n \fphi(x-k)
       = \sum_{m=0}^n {n\choose m}(-1)^m M_m x^{n-m}
   }
 \end{conjecture}
 \begin{proof}
 This conjecture is supported by the results of \prefpp{ex:sfixc5}.
-However, I have no proof at this time. 
+However, I have no proof at this time.
 \begin{align*}
   (-1)^n M_n
     &= (-1)^n \sum_{k\in\Z} (x-k)^n  \fphi(x-k)
   \\&= (-1)^n \sum_{k\in\Z} \sum_{m=0}^n {n\choose m}x^{n-m} (-k)^m \fphi(x-k)
   \\&= (-1)^n \sum_{m=0}^n {n\choose m}(-1)^m x^{n-m} \sum_{k\in\Z} k^m \fphi(x-k)
-  \\&= \left[(-1)^{2n} \sum_{k\in\Z} k^n \fphi(x-k)\right]
+  \\&= \brs{(-1)^{2n} \sum_{k\in\Z} k^n \fphi(x-k)}
       \;+\; (-1)^n \sum_{m=0}^{n-1} {n\choose m}(-1)^m x^{n-m} \sum_{k\in\Z} k^m \fphi(x-k)
-  \\&= \left[\sum_{k\in\Z} k^n \fphi(x-k)\right]
+  \\&= \brs{\sum_{k\in\Z} k^n \fphi(x-k)}
       \;+\; (-1)^n \sum_{m=0}^{n-1} {n\choose m}(-1)^m x^{n-m} \sum_{k\in\Z} k^m \fphi(x-k)
   \\
   \\
   \sum_{k\in\Z} k^n \fphi(x-k)
     &= -(-1)^n \sum_{m=0}^{n-1} {n\choose m}(-1)^m x^{n-m} \sum_{k\in\Z} k^m \fphi(x-k)
         + (-1)^n M_n
-  \\&=  \sum_{m=0}^{n-1} {n\choose m}(-1)^m 
-         \mcom{\left[(-1)^{n-1}\sum_{k\in\Z} k^m \fphi(x-k)\right]}{$M_m?$}
-         x^{n-m} 
+  \\&=  \sum_{m=0}^{n-1} {n\choose m}(-1)^m
+         \mcom{\brs{(-1)^{n-1}\sum_{k\in\Z} k^m \fphi(x-k)}}{$M_m?$}
+         x^{n-m}
         + (-1)^n M_n
 \\
 \\
@@ -864,19 +864,19 @@ However, I have no proof at this time.
   \sum_{k\in\Z} k^n \fphi(x-k)
     &= -(-1)^n \sum_{m=0}^{n-1} {n\choose m}(-1)^m x^{n-m} \sum_{k\in\Z} k^m \fphi(x-k)
         + (-1)^n M_n
-  \\&=  \sum_{m=0}^{n-1} {n\choose m}(-1)^m 
-         (-1)^{n-1}\left[\sum_{k\in\Z} k^m \fphi(x-k)\right]
-         x^{n-m} 
+  \\&=  \sum_{m=0}^{n-1} {n\choose m}(-1)^m
+         (-1)^{n-1}\brs{\sum_{k\in\Z} k^m \fphi(x-k)}
+         x^{n-m}
         + (-1)^n M_n
-  \\&=  \sum_{m=0}^{n-1} {n\choose m}(-1)^m 
+  \\&=  \sum_{m=0}^{n-1} {n\choose m}(-1)^m
          (-1)^{n-1}
-         \left[
-           \sum_{p=0}^{m-1} {m\choose p}(-1)^p 
-           (-1)^{m-1}\left[\sum_{k\in\Z} k^p \fphi(x-k)\right]
-           x^{m-p} 
+         \brs{
+           \sum_{p=0}^{m-1} {m\choose p}(-1)^p
+           (-1)^{m-1}\brs{\sum_{k\in\Z} k^p \fphi(x-k)}
+           x^{m-p}
            + (-1)^m M_m
-         \right]
-         x^{n-m} 
+         }
+         x^{n-m}
         \\&\qquad+ (-1)^n M_n
 \end{align*}
 \end{proof}
@@ -907,7 +907,7 @@ Let $\Fphi(\omega)$ be the \fncte{Fourier transform} \xref{def:opFT} of $\fphi(x
     \text{(1) and (2)}
       &\implies \brlr{\opddwn  \Fphi(\omega)}_{\omega=2\pi k}=\cft (-i)^n \kdelta_k M_n
       && \text{by \prefp{lem:sfixc}}
-    \\&\implies \brlr{\opddw \Fphi(\omega)}_{\omega=0} = \cft (-i)^1 M_1 
+    \\&\implies \brlr{\opddw \Fphi(\omega)}_{\omega=0} = \cft (-i)^1 M_1
     \\&\implies \brlr{\opddw \Fphi(\omega)}_{\omega=0} = 0
       && \text{by (1) and def. of \prope{vanishing moments} \xref{def:vanish}}
     \\&\implies \brlr{\opddw \Fphi(\omega)}_{\omega=0} < \infty
@@ -922,7 +922,7 @@ How can we design a \structe{wavelet system} \xref{def:wavsys} to have \prope{$p
 One way is to design the \structe{scaling coefficient sequence} \xref{def:hn} $\seqn{h_n}$ in the \ope{z-domain} \xref{def:opZ}
 such that $\Zh(z)$ includes the factor $\brp{\frac{1+z^{-1}}{2}}^p$ (next theorem).
 This factor is included in the $\Zh(z)$ of the \structe{Daubechies-p wavelet system}\ifsxref{compactp}{def:Dp}.
-A similar factor \xref{lem:FTNn} also appears in the \ope{Fourier transform} \xref{def:opFT} 
+A similar factor \xref{lem:FTNn} also appears in the \ope{Fourier transform} \xref{def:opFT}
 of \structe{B-spline}s \xref{def:Bspline}.
 
 %---------------------------------------
@@ -950,14 +950,14 @@ Let $\seqnZ{q_n}$ be a sequence with \ope{z-transform} \xref{def:opZ} $\Zq(z)$.
 \end{lemma}
 \begin{proof}
 \begin{align*}
-            && \Zh(z)      
+            && \Zh(z)
                    &= \brp{\frac{1+z^{-1}}{2}}^p\,\Zq(z)
                   &&  \text{by (1)}
-  \\\implies&& \Dh(\omega) 
+  \\\implies&& \Dh(\omega)
                    &= \brp{\frac{1+e^{i\omega}}{2}}^p\,\Fq(\omega)
                    && \text{by \prefp{def:dtft}}
                    %\text{\scs by \prefp{def:opZ} and \prefp{def:dtft}}
-  \\\implies&& \brlr{\opddwn\Dh(\omega)}_{\omega=\pi} 
+  \\\implies&& \brlr{\opddwn\Dh(\omega)}_{\omega=\pi}
                    &= \brlr{\opddwn\brp{\frac{1+e^{i\omega}}{2}}^p\,\Fq(\omega)}_{\omega=\pi}
                \\&&&= \brlr{\sum_{k=0}^n\bcoef{n}{k} \brs{\opddwn[k]\brp{\frac{1+e^{i\omega}}{2}}^p} \, \brs{\opddwn[n-k]\Fq(\omega)}}_{\omega=\pi}
                  %&& \text{by \thme{Leibnitz GPR} \xref{lem:LGPR}}
@@ -982,7 +982,7 @@ Let $\seqnZ{q_n}$ be a sequence with \ope{z-transform} \xref{def:opZ} $\Zq(z)$.
 %Let $\wavsys$ be an \hib{orthonormal} wavelet system.
 %\thmboxt{
 %  $\ds\left.\begin{array}{FlD}
-%    1. & |\fpsi(x)| \le \frac{C_1}{(1+|x|)^\alpha}, \; \alpha>p 
+%    1. & |\fpsi(x)| \le \frac{C_1}{(1+|x|)^\alpha}, \; \alpha>p
 %       & \text{and} \\
 %    2. & \text{$\fpsi(\omega)$ is $N$ times differentiable}
 %       & \text{and} \\
@@ -994,7 +994,7 @@ Let $\seqnZ{q_n}$ be a sequence with \ope{z-transform} \xref{def:opZ} $\Zq(z)$.
 %    2. & \ds \Dh(\omega) = \left(\frac{1+e^{-i\omega}}{2}\right)^p \fQ(\omega)
 %  \end{array}\right.$
 %  \\
-%  where $\fQ(\omega)$ is $2\pi$ periodic and 
+%  where $\fQ(\omega)$ is $2\pi$ periodic and
 %  $\fQ(\omega)$ is $p-1$ times differentiable.
 %  }
 %\end{theorem}
@@ -1012,7 +1012,7 @@ Let $\seqnZ{q_n}$ be a sequence with \ope{z-transform} \xref{def:opZ} $\Zq(z)$.
 %
 %\begin{tabular}{|>{\scs}rlcll|}
 %  \hline
-%     &  name & $p$ & & 
+%     &  name & $p$ & &
 %  \\\hline
 %  %1. &  Haar                            & 1 & \pref{ex:pun_n=2}       & \prefpo{ex:pun_n=2}\\
 %  %2. &  order 1 B-spline wavelet system & 2 & \pref{ex:sw_gh_tent}    & \prefpo{ex:sw_gh_tent}\\
@@ -1021,14 +1021,14 @@ Let $\seqnZ{q_n}$ be a sequence with \ope{z-transform} \xref{def:opZ} $\Zq(z)$.
 %  2. &  order 1 B-spline & 2 & \pref{ex:N1_hg}                           & \prefpo{ex:N1_hg} \\
 %  3. &  order 2 B-spline & 3 & \pref{ex:N2_hg}                           & \prefpo{ex:N2_hg} \\
 %  4. &  Daubechies-p2    & 2 & \ifdochas{compactp}{\pref{ex:dau-p2}}     & \ifdochas{compactp}{\prefpo{ex:dau-p2}}\\
-%  5. &  Daubechies-p3    & 3 & \ifdochas{compactp}{\pref{ex:dau-p3}}     & \ifdochas{compactp}{\prefpo{ex:dau-p3}} \\   
+%  5. &  Daubechies-p3    & 3 & \ifdochas{compactp}{\pref{ex:dau-p3}}     & \ifdochas{compactp}{\prefpo{ex:dau-p3}} \\
 %  6. &  Symlet-p4        & 4 & \ifdochas{compactp}{\pref{ex:symlet_p4}}  & \ifdochas{compactp}{\prefpo{ex:symlet_p4}}\\
 %  \hline
 %\end{tabular}
 %
 
 %\[\begin{array}{llcllll}
-%  1. & \ds\sum_{n\in\Z}  h_n   &=& \sqrt{2} 
+%  1. & \ds\sum_{n\in\Z}  h_n   &=& \sqrt{2}
 %     & \text{(admissiblility condition)}
 %     & \text{\pref{thm:admiss}}
 %     & \text{page~\pageref{thm:admiss}}
@@ -1042,15 +1042,15 @@ Let $\seqnZ{q_n}$ be a sequence with \ope{z-transform} \xref{def:opZ} $\Zq(z)$.
 %\\
 %  3. & \ds\sum_{m\in\Z} (-1)^m m^p  h_m   &=& 0
 %     & \text{(vanishing $p$th moment)}
-%     & \text{\pref{thm:vanish}} 
+%     & \text{\pref{thm:vanish}}
 %     & \text{page~\pageref{thm:vanish}}
 %\end{array}\]
 %
-%Note that the ``zero at $z=-1$" constraint 
+%Note that the ``zero at $z=-1$" constraint
 %(\pref{thm:zero_unity_evenodd} page~\pageref{thm:zero_unity_evenodd})
 %is just the vanishing 0th moment (and hence included in 3. for $p=0$).
-%Also, the ``partition of unity" and ``even-odd" constraints 
-%are, by the same theorem, equivalent  to the 
+%Also, the ``partition of unity" and ``even-odd" constraints
+%are, by the same theorem, equivalent  to the
 %``zero at $z=-1$" constraint.
 
 
@@ -1077,16 +1077,16 @@ Let $\seqnZ{q_n}$ be a sequence with \ope{z-transform} \xref{def:opZ} $\Zq(z)$.
 %    \item Proof that $\brp{\sum_{n\in\Z} \opT^n}$ is normal:
 %      \begin{enumerate}
 %        \item By \prefpp{prop:vsmra_real_sa}, $\brp{\sum_{n\in\Z} \opT^n}$ is self-adjoint.
-%        \item Because self-adjoint $\implies$ normal, 
+%        \item Because self-adjoint $\implies$ normal,
 %              $\brp{\sum_{n\in\Z} \opT^n}$ is also normal.
 %      \end{enumerate}
-%    \item Proof that $\normop{\opT}=\normop{\opD}=1$: 
+%    \item Proof that $\normop{\opT}=\normop{\opD}=1$:
 %      \begin{enumerate}
 %        \item By \prefpp{prop:vsmra_real_Ta} and \prefpp{prop:vsmra_real_Ti},
 %          $\opTi=\opTa$ and $\opDi=\opDa$.
 %        \item Therefore, $\opT$ and $\opD$ are both unitary operators because
 %          $\opTa\opT=\opT\opTa=\opI$ and $\opDa\opD=\opD\opDa=\opI$.
-%        \item Because $\opT$ and $\opD$ are unitary operators, 
+%        \item Because $\opT$ and $\opD$ are unitary operators,
 %          by \prefpp{thm:unitary_prop}
 %          $\normop{\opT}=\normop{\opD}=1$.
 %    \end{enumerate}
@@ -1119,7 +1119,7 @@ Let $\seqnZ{q_n}$ be a sequence with \ope{z-transform} \xref{def:opZ} $\Zq(z)$.
 %                 &      n \in\Z
 %     \\
 %     \Dg(\omega) &\eqd& \inproda{\fpsi(x)}{\fkern{n}{\omega}}
-%                 &\eqd& \sum_{n\in\Z} g_n \fkernea{n}{\omega} 
+%                 &\eqd& \sum_{n\in\Z} g_n \fkernea{n}{\omega}
 %                 &      n \in\Z
 %\end{array} \]
 %\thmbox{
@@ -1149,7 +1149,7 @@ Let $\seqnZ{q_n}$ be a sequence with \ope{z-transform} \xref{def:opZ} $\Zq(z)$.
 %   \\&= \sum_{n\in\Z}  h_n \inprod{\vphi}{\cwt \fkern{n}{\frac{1}{2}\omega}\fkern{x}{\frac{1}{2}\omega}}
 %     && \text{by \prefp{lem:TDk}}
 %   \\&= \sum_{n\in\Z}  h_n  \;
-%        \cwt  \; 
+%        \cwt  \;
 %        \fkernea{n}{\frac{1}{2}\omega} \;
 %        \inprod{\vphi}{\fkern{x}{\frac{1}{2}\omega}}
 %     && \text{by property of inner-products \prefpo{def:inprod}}
@@ -1171,22 +1171,22 @@ Let $\seqnZ{q_n}$ be a sequence with \ope{z-transform} \xref{def:opZ} $\Zq(z)$.
 %   \Fphi(\omega)
 %     &= \frac{1}{\sqrt{2}} \Dh\left(\frac{\omega}{2}\right)\Fphi\left(\frac{\omega}{2}\right)
 %     && \text{by part \ding{"C0}}
-%   \\&= \left[
+%   \\&= \brs{
 %          \frac{1}{\sqrt{2}} \Dh\left(\frac{\omega}{2}\right)
 %          \frac{1}{\sqrt{2}} \Dh\left(\frac{\omega}{4}\right)
-%        \right]\; \Fphi\left(\frac{\omega}{4}\right)
-%   \\&= \left[
+%        }\; \Fphi\left(\frac{\omega}{4}\right)
+%   \\&= \brs{
 %          \frac{1}{\sqrt{2}} \Dh\left(\frac{\omega}{2}\right)
 %          \frac{1}{\sqrt{2}} \Dh\left(\frac{\omega}{4}\right)
 %          \frac{1}{\sqrt{2}} \Dh\left(\frac{\omega}{8}\right)
-%        \right]\; \Fphi\left(\frac{\omega}{8}\right)
+%        }\; \Fphi\left(\frac{\omega}{8}\right)
 %   \\&\vdots
-%   \\&= \left[\prod_{n=1}^\infty \frac{1}{\sqrt{2}} \Dh\left(\frac{\omega}{2^n}\right)\right]
-%        \left[ \lim_{n\to\infty} \Fphi\left(\frac{\omega}{n}\right) \right]
+%   \\&= \brs{\prod_{n=1}^\infty \frac{1}{\sqrt{2}} \Dh\left(\frac{\omega}{2^n}\right)}
+%        \brs{ \lim_{n\to\infty} \Fphi\left(\frac{\omega}{n}\right) }
 %   \\&= \Fphi\left(0\right) \;
-%        \left[\prod_{n=1}^\infty \frac{1}{\sqrt{2}} \Dh\left(\frac{\omega}{2^n}\right)\right]
+%        \brs{\prod_{n=1}^\infty \frac{1}{\sqrt{2}} \Dh\left(\frac{\omega}{2^n}\right)}
 %   \\&= \left. \inprod{\vphi}{\fkern{x}{\omega}} \right|_{\omega=0} \;
-%        \left[ \prod_{n=1}^\infty \frac{1}{\sqrt{2}} \Dh\left(\frac{\omega}{2^n}\right) \right]
+%        \brs{ \prod_{n=1}^\infty \frac{1}{\sqrt{2}} \Dh\left(\frac{\omega}{2^n}\right) }
 %     && \text{by definition of $\Dh(\omega)$}
 %   \\&= \inprod{\vphi}{\vunit} \;
 %        \prod_{n=1}^\infty \frac{1}{\sqrt{2}} \Dh\left(\frac{\omega}{2^n}\right)
