--- a/common/polynom.tex
+++ b/common/polynom.tex
@@ -8,7 +8,7 @@
 %======================================
 %\qboxnps{
 %  \href{http://en.wikipedia.org/wiki/Jacques_Charles_Fran\%C3\%A7ois_Sturm}{Jacques Charles Francois Sturm}
-%  \href{http://www-history.mcs.st-andrews.ac.uk/Timelines/TimelineE.html}{(1803--1855)}, 
+%  \href{http://www-history.mcs.st-andrews.ac.uk/Timelines/TimelineE.html}{(1803--1855)},
 %  \href{http://www-history.mcs.st-andrews.ac.uk/BirthplaceMaps/Places/France.html}{French-German} mathematician, \\
 %  {\footnotesize (which he often said when presenting {\em Sturm's Method}
 %  of locating polynomial zeros.)}
@@ -50,11 +50,11 @@ Let $\fieldF$ be a \structe{field}.
   \citerpg{fuhrmann2012}{11}{1461403375}
   }
 %--------------------------------------
-%Let $\fp$ be a \structe{polynomial} \xref{def:polynomial} of degree $\xN$ and $\fq$ a polynomial of degree $\xM$ 
+%Let $\fp$ be a \structe{polynomial} \xref{def:polynomial} of degree $\xN$ and $\fq$ a polynomial of degree $\xM$
 %over a \structe{field} $\fieldF$ \xref{def:polynomial}.
 Let $\fieldF$ be a \structe{field}.
 \defboxt{
-  A polynomial $\fp$ of degree $\xN$ over the field $\F$ and\\ 
+  A polynomial $\fp$ of degree $\xN$ over the field $\F$ and\\
   a polynomial $\fq$ of degree $\xM$ over the field $\F$ are \hid{equal} if
   \\\indentx$\begin{array}{FMD}
     1. & $\xN=\xM$ & and\\
@@ -72,10 +72,10 @@ Let $\fieldF$ be a \structe{field}.
 %%--------------------------------------
 %Let $\vp$ and $\vq$ be sequences and $F=(\setX,+,\cdot)$ a \structe{field} over a set $\setX$.
 %\begin{align*}
-%  \vp 
+%  \vp
 %    &\eqd \seqn{\alpha_{n-1},\ldots,\alpha_2,\alpha_1,\alpha_0},
 %  \\
-%  \vq 
+%  \vq
 %    &\eqd \seqn{\beta_{m-1},\ldots,\beta_2,\beta_1,\beta_0}
 %\end{align*}
 %
@@ -88,7 +88,7 @@ Let $\fieldF$ be a \structe{field}.
 %for all $\vp,\vq\in P$
 %\[
 %\begin{array}{lrcl}
-%  1.&   \vp\oplus\vq 
+%  1.&   \vp\oplus\vq
 %    &=& \vq\oplus\vp
 %  \\
 %  2.&   \epsilon\vp
@@ -97,13 +97,13 @@ Let $\fieldF$ be a \structe{field}.
 %  3.&   \vp\oplus\vq
 %    &=& \ds\left\{\begin{array}{ll}
 %          (\alpha_{n-1},\ldots,\alpha_m,\quad
-%           \alpha_{m-1}+\beta_{m-1}, \ldots, \alpha_1+\beta_1, 
+%           \alpha_{m-1}+\beta_{m-1}, \ldots, \alpha_1+\beta_1,
 %           \alpha_0+\beta_0
 %          )
 %          & \text{ for $n\ge m$}
 %          \\
 %          (\beta_{m-1},\ldots,\beta_n,\quad
-%           \alpha_{n-1}+\beta_{n-1}, \ldots, \alpha_1+\beta_1, 
+%           \alpha_{n-1}+\beta_{n-1}, \ldots, \alpha_1+\beta_1,
 %           \alpha_0+\beta_0
 %          )
 %          & \text{ for $m\ge n$}
@@ -132,7 +132,7 @@ Let $\fieldF$ be a \structe{field}.
 %\label{thm:poly}
 %\index{polynomial}
 %%--------------------------------------
-%Let $P$ be a set of polynomials. 
+%Let $P$ be a set of polynomials.
 %\thmbox{\begin{tabular}{ll}
 %  1. & $P$ is a vector space.
 %  \\
@@ -183,14 +183,14 @@ Let $\fieldF$ be a \structe{field}.
 %=======================================
 %\subsection{Multiplication}
 %=======================================
-Polynomial multiplication is equivalent to 
+Polynomial multiplication is equivalent to
 convolution \xref{def:convd} of the coefficients \xref{def:polynomial}.
 \footnote{
   \fncte{Convolution}: In fact, using \hie{GNU Octave}\texttrademark\hspace{1ex} or \hie{MatLab}\texttrademark,
   polynomial multiplication can be performed using convolution.
-  For example, the operation 
-  $(x^3 + 5x^2 + 7x + 9)(4x^2 + 11)$ can be calculated in 
-  \hie{GNU Octave}\texttrademark\hspace{1ex} or \hie{MatLab}\texttrademark\hspace{1ex} with 
+  For example, the operation
+  $(x^3 + 5x^2 + 7x + 9)(4x^2 + 11)$ can be calculated in
+  \hie{GNU Octave}\texttrademark\hspace{1ex} or \hie{MatLab}\texttrademark\hspace{1ex} with
   conv([1 5 7 9],[4 0 11])
   %\verb.conv([1 5 7 9],[4 0 11]).
   }
@@ -205,15 +205,15 @@ Let $\seqn{\alpha_n\in\C}$, $\seqn{b_n\in\C}$, and $x\in\C$.
   \brp{\sum_{n=0}^\xN \alpha_n x^n }
   \brp{\sum_{n=0}^\xM \beta_n  x^n }
   =
-  \sum_{n=0}^{\xN+\xM} 
+  \sum_{n=0}^{\xN+\xM}
   \mcom{\brp{\sum_{k=\max(0,n-\xM)}^{\min(n,\xN)} \alpha_n \beta_{k-n} }}
-       {Cauchy product} 
+       {Cauchy product}
   x^n
   }
 \end{theorem}
 \begin{proof}
 %\begin{enumerate}
-%\item 
+%\item
 \begin{align*}
   \left(\sum_{n=0}^\xN \alpha_n x^n \right)\left(\sum_{m=0}^\xM \beta_m x^m \right)
     &= \sum_{n=0}^\xN \sum_{m=0}^\xM \alpha_n \beta_m x^{n+m}
@@ -221,7 +221,7 @@ Let $\seqn{\alpha_n\in\C}$, $\seqn{b_n\in\C}$, and $x\in\C$.
     && k\eqd n+m \iff m=k-n
   %\\&\vdots
   \\&= \sum_{n=0}^{\xN+\xM} \brp{\sum_{k=\max(0,n-\xM)}^{\min(n,\xN)} \alpha_n \beta_{k-n} } x^n
-  %\\&= \sum_{n=0}^{\xN+\xM} 
+  %\\&= \sum_{n=0}^{\xN+\xM}
   %     \left(\sum_{k=0}^n \alpha_k \beta_{n-k} \right) x^n
 \end{align*}
 
@@ -235,23 +235,23 @@ Let $\seqn{\alpha_n\in\C}$, $\seqn{b_n\in\C}$, and $x\in\C$.
   \alpha_2 & \alpha_2 \beta_0 x^2 & \alpha_2 \beta_1x^3 & \alpha_2 \beta_2x^4 & \alpha_2 \beta_3x^5 & \cdots & \alpha_2 \beta_\xM x^{2+\xM} \\
   \alpha_3 & \alpha_3 \beta_0 x^3 & \alpha_3 \beta_1x^4 & \alpha_3 \beta_2x^5 & \alpha_3 \beta_3x^6 & \cdots & \alpha_3 \beta_\xM x^{3+\xM} \\
   \vdots & \vdots & \vdots    & \vdots    & \vdots    & \ddots & \vdots        \\
-  \alpha_\xN & \alpha_\xN \beta_0x^\xN & \alpha_\xN \beta_1 x^{\xN+1} & \alpha_\xN \beta_2 x^{\xN+2} & \alpha_\xN \beta_3x^{\xN+3} & \cdots & \alpha_\xN \beta_\xM x^{\xN+\xM} 
+  \alpha_\xN & \alpha_\xN \beta_0x^\xN & \alpha_\xN \beta_1 x^{\xN+1} & \alpha_\xN \beta_2 x^{\xN+2} & \alpha_\xN \beta_3x^{\xN+3} & \cdots & \alpha_\xN \beta_\xM x^{\xN+\xM}
 \end{array}\]
 \begin{enumerate}
 \item The expression $\sum_{n=0}^\xN \sum_{m=0}^\xM \alpha_n \beta_m x^{n+m}$
-      is equivalent to adding {\em horizontally} 
+      is equivalent to adding {\em horizontally}
       from left to right, from the first row to the last.
 
-\item If we switched the order of summation to 
+\item If we switched the order of summation to
       $\sum_{m=0}^\xM \sum_{n=0}^\xN \alpha_n \beta_m x^{n+m}$,
-      then it would be equivalent to adding {\em vertically} 
-      from top to bottom, 
+      then it would be equivalent to adding {\em vertically}
+      from top to bottom,
       from the first column to the last.
 
 \item For $\xN=\xM=\infty$, the expression
       $\sum_{n=0}^{\xN+\xM} \left(\sum_{k=0}^n \alpha_k \beta_{n-k} \right) x^n$
-      is equivalent to adding {\em diagonally} 
-      starting from the upper left corner and proceeding 
+      is equivalent to adding {\em diagonally}
+      starting from the upper left corner and proceeding
       towards the lower right.
 
 \item For finite $\xN$ and $\xM$\ldots
@@ -335,9 +335,9 @@ Some examples of primitive polynomials over $GF(2)$ are
    31 & $\fp(x) = x^{31} + x^{28} + 1 $
 \end{tabular}}
 \end{example}
-  
-An m-sequence is the remainder when dividing any non-zero polynomial by a primitive 
-polynomial.  
+
+An m-sequence is the remainder when dividing any non-zero polynomial by a primitive
+polynomial.
 We can define an {\em equivalence relation}%
 \ifdochas{found}{\footnote{
    \hie{equivalence relation}: \prefpp{def:eq_rel}}}
@@ -357,12 +357,12 @@ Let  \hspace{5mm}
    $\ds \frac{\alpha_2(x)}{p(x)} = \fq_2(x) + \frac{r_2(x)}{p(x)}$.
 \end{center}
 
-Then $\alpha_1(x)\equiv \alpha_2(x)$ with respect to $p(x)$ if $r_1(x)=r_2(x)$. 
+Then $\alpha_1(x)\equiv \alpha_2(x)$ with respect to $p(x)$ if $r_1(x)=r_2(x)$.
 \end{definition}
 
 Using the equivalence relation of Definition \ref{def:equiv},
 we can develop two very useful equivalent representations of
-polynomials over GF(2).  
+polynomials over GF(2).
 We will call these two representations the {\em exponential} representation
 and the {\em polynomial} representation.
 
@@ -371,7 +371,7 @@ and the {\em polynomial} representation.
 \label{ex:representations}
 \index{cycle}
 %--------------------------------------
-By Definition \ref{def:equiv} and 
+By Definition \ref{def:equiv} and
 under $p(x)=x^3+x+1$, we have the following equivalent representations:
 \exbox{\begin{array}{lcrclclclllll}
    \frac{x^0}{x^3+x+1} &=& 0     &+& \frac{1  }{x^3+x+1}     &\implies& x^0 &\equiv& 1   \\
@@ -381,15 +381,15 @@ under $p(x)=x^3+x+1$, we have the following equivalent representations:
    \frac{x^4}{x^3+x+1} &=& x     &+& \frac{x^2+x}{x^3+x+1}   &\implies& x^4 &\equiv& x^2+x \\
    \frac{x^5}{x^3+x+1} &=& x^2+1 &+& \frac{x^2+x+1}{x^3+x+1} &\implies& x^5 &\equiv& x^2+x+1 \\
    \frac{x^6}{x^3+x+1} &=& x^3+x+1 &+& \frac{x^2+1}{x^3+x+1} &\implies& x^6 &\equiv& x^2+1 \\
-   \frac{x^7}{x^3+x+1} &=& x^4+x^2+x+1 &+& \frac{1}{x^3+x+1} &\implies& x^7 &\equiv& 1 
+   \frac{x^7}{x^3+x+1} &=& x^4+x^2+x+1 &+& \frac{1}{x^3+x+1} &\implies& x^7 &\equiv& 1
 \end{array}}
 
-Notice that $x^7\equiv x^0$, and so a cycle is formed with 
+Notice that $x^7\equiv x^0$, and so a cycle is formed with
 $2^3-1=7$ elements in the cycle.
-The monomials to the left of the $\equiv$ are the {\em exponential} 
+The monomials to the left of the $\equiv$ are the {\em exponential}
 representation and the polynomials to the right are the {\em polynomial}
 representation.
-Additionally, the polynomial representation may be put in a vector form giving a 
+Additionally, the polynomial representation may be put in a vector form giving a
 {\em vector} representation.
 The vectors may be interpreted as a binary number and represented as a decimal numeral.
 \exbox{\begin{array}{c *{5}{c@{\,}} cc}
@@ -400,7 +400,7 @@ The vectors may be interpreted as a binary number and represented as a decimal n
    x^3 &     & & x &+& 1 & [011] & 3  \\
    x^4 & x^2 &+& x & &   & [110] & 6  \\
    x^5 & x^2 &+& x &+& 1 & [111] & 7  \\
-   x^6 & x^2 &+&   & & 1 & [101] & 5  
+   x^6 & x^2 &+&   & & 1 & [101] & 5
 \end{array}}
 \end{example}
 
@@ -408,7 +408,7 @@ The vectors may be interpreted as a binary number and represented as a decimal n
 \begin{example}
 \label{ex:1/p(x)}
 %--------------------------------------
-We can generate an m-sequence of length 
+We can generate an m-sequence of length
 $2^3-1=7$ by dividing 1 by the primitive polynomial $x^3+x+1$.
 
 
@@ -444,11 +444,11 @@ $2^3-1=7$ by dividing 1 by the primitive polynomial $x^3+x+1$.
            &        & x^{-11} + x^{-13} + x^{-14} \\
    \cline{3-3}
            &        & x^{-14}           \\
-           &        & \vdots           
+           &        & \vdots
 \end{array}
 \]
 \end{fsL}
-The coefficients, starting with the $x^{-1}$ term, 
+The coefficients, starting with the $x^{-1}$ term,
 of the resulting polynomial form the m-sequence
 \[ 0010111 \; 0010111 \; \cdots \]
 which repeats every $2^3-1=7$ elements.
@@ -506,7 +506,7 @@ $x^3+x+1$ using vector notation.
 \]
 \end{fsL}
 
-The coefficients, starting to the right of the binary point, 
+The coefficients, starting to the right of the binary point,
 is again the sequence
 \[ 0010111 \; 0010111 \; \cdots. \]
 \end{example}
@@ -539,14 +539,14 @@ $\gcd(\fr_1(x),\fr_2(x))$, and factors $\fa(x)$ and $\fb(x)$ such that
   \hline
   \hline
    1  & \fr_1(x)
-      & - 
-      & 1 
-      & 0  
+      & -
+      & 1
+      & 0
       \\
-   2  & \fr_2(x)   
-      & - 
-      & 0 
-      & 1  
+   2  & \fr_2(x)
+      & -
+      & 0
+      & 1
       \\
   \hline
    3  & \fr_1-q_3 \fr_2
@@ -576,8 +576,8 @@ $\gcd(\fr_1(x),\fr_2(x))$, and factors $\fa(x)$ and $\fb(x)$ such that
       \\
    n+1& 0
       & \fq_{n+1}
-      & 
-      & 
+      &
+      &
       \\
   \hline
 \end{array}}
@@ -595,16 +595,16 @@ $\gcd(\fr_1(x),\fr_2(x))$, and factors $\fa(x)$ and $\fb(x)$ such that
 \label{ex:eea_n=2}
 \index{Extended Euclidean Algorithm}
 %--------------------------------------
-Let 
+Let
   \[ \fu(x)\eqd (1-x)^2  \hspace{4ex} \fv(x)\eqd x^2. \]
 
 The greatest common divisor and factors of $\fu$ and $\fv$ are such that
-\[ 
+\[
    \mcom{(1-x)^2}{$\fu(x)$} \mcom{(1+2x)}{$\fa(x)$}   +
-   \mcom{(x^2)  }{$\fv(x)$} \mcom{(3-2x)}{$\fb(x)$} = 
+   \mcom{(x^2)  }{$\fv(x)$} \mcom{(3-2x)}{$\fb(x)$} =
    \mcom{1}{$\gcd$}
 \]
-Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be 
+Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
 {\em relatively prime}.
 \end{example}
 \begin{proof}
@@ -614,22 +614,22 @@ Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
   \hline
   \hline
   -1  & (1-x)^2=1-2x+x^2 = \fu(x)
-      & - 
-      & 1 
-      & 0  
+      & -
+      & 1
+      & 0
       \\
    0  & x^2 = \fv(x)
-      & - 
-      & 0 
-      & 1  
+      & -
+      & 0
+      & 1
       \\
   \hline
    1  & 1-2x
-      &  1  
+      &  1
       &  1
       & -1
       \\
-   2  &  \frac{1}{2}x 
+   2  &  \frac{1}{2}x
       & -\frac{1}{2}x
       &  \frac{1}{2}x
       & 1-\frac{1}{2}x
@@ -659,16 +659,16 @@ Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
 \label{ex:eea_n=3}
 \index{Extended Euclidean Algorithm}
 %--------------------------------------
-Let 
+Let
   \[ \fu(x)\eqd (1-x)^3  \hspace{4ex} \fv(x)\eqd x^3. \]
 
 The greatest common divisor and factors of $\fu$ and $\fv$ are such that
-\[ 
+\[
    \mcom{(1-x)^3}{$\fu(x)$} \mcom{(1+3x+6x^2)}{$\fa(x)$}   +
-   \mcom{(x^3)  }{$\fv(x)$} \mcom{(10-15x+6x^2)}{$\fb(x)$} = 
+   \mcom{(x^3)  }{$\fv(x)$} \mcom{(10-15x+6x^2)}{$\fb(x)$} =
    \mcom{1}{$\gcd$}
 \]
-Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be 
+Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
 {\em relatively prime}.
 \end{example}
 \begin{proof}
@@ -677,19 +677,19 @@ Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
   n  & \fr_n=r_{n-2}-r_{n-1}q_n  & \fq_n   & \alpha_n=a_{n-2}-q_n \alpha_{n-1} & \beta_n=b_{n-2}-q_n \beta_{n-1}  \\
   \hline
   \hline
-  -1  & (1-x)^3=1-3x+3x^2-x^3   
-      & - 
-      & 1 
-      & 0  
+  -1  & (1-x)^3=1-3x+3x^2-x^3
+      & -
+      & 1
+      & 0
       \\
-   0  & x^3      
-      & - 
-      & 0 
-      & 1  
+   0  & x^3
+      & -
+      & 0
+      & 1
       \\
   \hline
    1  & 1-3x+3x^2
-      & -1  
+      & -1
       &  1
       &  1
       \\
@@ -716,8 +716,8 @@ Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
       \hline
    6  & 0
       & \frac{1}{6}x
-      & 
-      & 
+      &
+      &
       \\
   \hline
 \end{array}\]
@@ -730,15 +730,15 @@ Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
 \label{ex:eea_n=4}
 \index{Extended Euclidean Algorithm}
 %--------------------------------------
-Let 
+Let
   \[ \fu(x)\eqd (1-x)^4  \hspace{4ex} \fv(x)\eqd x^4. \]
 
 The greatest common divisor and factors of $\fu$ and $\fv$ are such that
 \[ \mcom{(1-x)^4}{$\fu(x)$} \mcom{(1 + 4x + 10x^2 + 20x^3)}{$\fa(x)$}   +
-   \mcom{(x^4)  }{$\fv(x)$} \mcom{(35 -84x + 70x^2 -20x^3)}{$\fb(x)$} = 
+   \mcom{(x^4)  }{$\fv(x)$} \mcom{(35 -84x + 70x^2 -20x^3)}{$\fb(x)$} =
    \mcom{1}{$\gcd$}
 \]
-Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be 
+Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
 {\em relatively prime}.
 \end{example}
 \begin{proof}
@@ -748,18 +748,18 @@ Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
   \hline
   \hline
   -1  & (1-x)^4=1-4x+6^2-4x^3+x^4
-      & - 
-      & 1 
-      & 0  
+      & -
+      & 1
+      & 0
       \\
    0  & x^4
-      & - 
-      & 0 
-      & 1  
+      & -
+      & 0
+      & 1
       \\
   \hline
    1  & 1-4x+6x^2-4x^3
-      &  1  
+      &  1
       &  1
       & -1
       \\
@@ -768,17 +768,17 @@ Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
       & \frac{1}{4}x
       & 1-\frac{1}{4}x
       \\
-   3  & 1 - \frac{10}{3}x + \frac{10}{3}x^2 
+   3  & 1 - \frac{10}{3}x + \frac{10}{3}x^2
       & -         \frac{8}{3}
-      & 1 + \frac{2}{3}x 
+      & 1 + \frac{2}{3}x
       & \frac{5}{3} - \frac{2}{3}x
       \\
    4  & -\frac{1}{5}x + \frac{1}{2}x^2
       & \frac{3}{2}\cdot\frac{3}{10}x
-      & -\frac{1}{5}x - \frac{3}{10}x^2 
+      & -\frac{1}{5}x - \frac{3}{10}x^2
       & 1 - x + \frac{3}{10}x^2
       \\
-   5  & 1 - 2x  
+   5  & 1 - 2x
       & \frac{20}{3}
       & 1 + 2x + 2x^2
       &  -5 + 6x - 2x^2
@@ -790,8 +790,8 @@ Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
       \\
    7  & 1 = \gcd((1-x)^4,x^4)
       & -40
-      & 1 + 4x + 10x^2 + 20x^3 
-      & 35 -84x + 70x^2 -20x^3 
+      & 1 + 4x + 10x^2 + 20x^3
+      & 35 -84x + 70x^2 -20x^3
       \\
   \hline
    8  & 0
@@ -811,7 +811,7 @@ Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
   Concurrently, algebraic analysis appeared to be a \structe{field} where nothing remained to be done,
   or where whatever remained to be done would have only been worthless speculation.
   \ldots
-  Nevertheless, the major contributors to infinitesimal analysis are well aware of the need to improve algebraic analysis: 
+  Nevertheless, the major contributors to infinitesimal analysis are well aware of the need to improve algebraic analysis:
   Their own progress depends upon it.}
 \citetblt{
   quote: & \citer{bezout1779}\\
@@ -843,17 +843,17 @@ Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
   %\footnote{\url{http://mathworld.wolfram.com/BezoutsTheorem.html}}
   }
 %--------------------------------------
-Let $\fp_1(x)$ be a polynomial of degree $n_1$ 
+Let $\fp_1(x)$ be a polynomial of degree $n_1$
 and $\fp_2(x)$ be a polynomial of degree $n_2$.
 \thmbox{\renewcommand{\arraystretch}{1}
   \mcom{\gcd(\fp_1(x),\; \fp_2(x))=1}
-       {\parbox{20ex}{$\fp_1(x)$ and $\fp_2(x)$ are relatively prime}}  
+       {\parbox{20ex}{$\fp_1(x)$ and $\fp_2(x)$ are relatively prime}}
   \qquad\implies\qquad
   \left\{\begin{array}{ll}
-    1. & \exists \fq_1(x),\fq_2(x) \st 
+    1. & \exists \fq_1(x),\fq_2(x) \st
     \\ \\ &
        {\renewcommand{\arraystretch}{0.7}
-       \begin{array}{l@{}l l l@{}lll} 
+       \begin{array}{l@{}l l l@{}lll}
          \mc{3}{l}{\mbox{degree }n_2-1} & \mc{3}{l}{\mbox{degree }n_1-1} \\
          & \downarrow &          & & \downarrow                        \\
          \fp_1(x)     & \fq_1(x) &+& \fp_2(x)   & \fq_2(x) &=& 1       \\
@@ -867,7 +867,7 @@ and $\fp_2(x)$ be a polynomial of degree $n_2$.
 }
 \end{theorem}
 \begin{proof}
-No proof at this time.  
+No proof at this time.
 \end{proof}
 
 
@@ -880,7 +880,7 @@ No proof at this time.
 \qboxnpq
   {\href{http://en.wikipedia.org/wiki/Descartes}{Ren\'e Descartes}
    \href{http://www-history.mcs.st-andrews.ac.uk/Timelines/TimelineC.html}{(1596--1650)},
-   \href{http://www-history.mcs.st-andrews.ac.uk/BirthplaceMaps/Places/France.html}{French} 
+   \href{http://www-history.mcs.st-andrews.ac.uk/BirthplaceMaps/Places/France.html}{French}
    philosopher and mathematician\footnotemark
   \index{Descartes, Ren\'e}
   \index{quotes!Descartes}
@@ -890,9 +890,9 @@ No proof at this time.
   {Neither the true nor the false roots are always real;
    sometimes they are imaginary;
    that is, while we can always conceive of as many roots for each equation
-   as I have already assigned, 
+   as I have already assigned,
    yet there is not always a definite quantity corresponding to each root so conceived of.
-   Thus, while we may conceive of the equation 
+   Thus, while we may conceive of the equation
    $x^3-6x^2+13x-10=0$ as having three roots,
    yet there is only one real root, 2, while the other two,
    however we may increase, diminish, or multiply them in accordance with the rules just laid down,
@@ -932,7 +932,7 @@ Let $\fp(x)=\sum_{n=0}^\xN \alpha_n x^n$ be a polynomial over a field $\fieldF$.
 %Let $\fp(x)$ be a polynomial of degree $\xN$ over a field $\fieldF$.
 \corbox{
   \brb{\mcom{\begin{array}{M}
-    There exists $\tuplexN{x_n}$\\ 
+    There exists $\tuplexN{x_n}$\\
     such that $\fp(x_n)=0$ for $n=0,1,\ldots,\xN$\\
     and where $x_n$ and $x_m$ are\\
     not necessarily distinct for $n\ne m$.
@@ -940,97 +940,35 @@ Let $\fp(x)=\sum_{n=0}^\xN \alpha_n x^n$ be a polynomial over a field $\fieldF$.
   \implies
   \brb{\begin{array}{>{\ds}l}
     \fp(x) = \brp{\frac{\alpha_0}{\ds\prod_{n=1}^\xN (-x_n)}}
-    \mcom{\prod_{n=1}^\xN (x-x_n)}{$\xN$ factors}  
+    \mcom{\prod_{n=1}^\xN (x-x_n)}{$\xN$ factors}
   \end{array}}
   }
 \end{corollary}
 
-\begin{figure}[ht]%
-\thicklines%
-\begin{center}
-\begin{fsL}
-\setlength{\unitlength}{0.10mm}
-%\begin{tabular*}{\textwidth}{c@{\extracolsep{\fill}}ccc}
-\begin{tabular}{|c|c|c|c|}
-\hline
-\begin{picture}(350,320)(-130,-130)
-  \color{axis}
-    \put(-130,   0){\line(1,0){260} }
-    \put(   0,-130){\line(0,1){260} }
-    \put( 140,   0){\makebox(0,0)[l]{$\Real(x)$}}
-    \put(   0, 140){\makebox(0,0)[b]{$\Imag(x)$}}
-  \color{circle}
-    \input{../common/circle.inp}
-    \put( 120, 120){\makebox(0,0)[lb]{$x=e^{i\theta}$}}
-    \put( 115, 115){\vector(-1,-1){43}}
-  \color[rgb]{0.91,0,0}  
-    \put(-100,    0){\circle{20}}
-\end{picture}       
-&
-\begin{picture}(350,320)(-130,-130)
-  \color{axis}
-    \put(-130,   0){\line(1,0){260} }
-    \put(   0,-130){\line(0,1){260} }
-    \put( 140,   0){\makebox(0,0)[l]{$\Real(x)$}}
-    \put(   0, 140){\makebox(0,0)[b]{$\Imag(x)$}}
-  \color{circle}
-    \input{../common/circle.inp}
-    \put( 120, 120){\makebox(0,0)[lb]{$x=e^{i\theta}$}}
-    \put( 115, 115){\vector(-1,-1){43}}
-  \color[rgb]{0.91,0,0}  
-    \put(   0,  100){\circle{20}}
-    \put(   0, -100){\circle{20}}
-\end{picture}       
-&
-\begin{picture}(350,320)(-130,-130)
-  \color{axis}
-    \put(-130,   0){\line(1,0){260} }
-    \put(   0,-130){\line(0,1){260} }
-    \put( 140,   0){\makebox(0,0)[l]{$\Real(x)$}}
-    \put(   0, 140){\makebox(0,0)[b]{$\Imag(x)$}}
-  \color{circle}
-    \input{../common/circle.inp}
-    \put( 120, 120){\makebox(0,0)[lb]{$x=e^{i\theta}$}}
-    \put( 115, 115){\vector(-1,-1){43}}
-  \color[rgb]{0.91,0,0}  
-    \put(  50,  87){\circle{20}}
-    \put(  50, -87){\circle{20}}
-    \put(-100,   0){\circle{20}}
-\end{picture}       
-&
-\begin{picture}(350,320)(-130,-130)
-  \color{axis}
-    \put(-130,   0){\line(1,0){260} }
-    \put(   0,-130){\line(0,1){260} }
-    \put( 140,   0){\makebox(0,0)[l]{$\Real(x)$}}
-    \put(   0, 140){\makebox(0,0)[b]{$\Imag(x)$}}
-  \color{circle}
-    \input{../common/circle.inp}
-    %\put( 120, 120){\makebox(0,0)[lb]{$x=e^{i\theta}$}}
-    %\put( 115, 115){\vector(-1,-1){43}}
-  \color[rgb]{0.91,0,0}  
-    \put(  71,  71){\circle{20}}
-    \put(  71, -71){\circle{20}}
-    \put( -71,  71){\circle{20}}
-    \put( -71, -71){\circle{20}}
-\end{picture}       
-\\
-$x+1=0$ & $x^2+1=0$ & $x^3+1=0$ & $x^4+1=0$ 
-\\\hline
-\end{tabular}
-\end{fsL}
-\end{center}
-\caption{
-   Roots of $x^{n}+1=0$
-   %\label{fig:h(x)=sqrt2}
-   }
+\begin{figure}%
+  \centering
+  \begin{tabular}{|c|c|c|c|}
+    \hline
+     \includegraphics{../common/math/graphics/pdfs/unitcircle_roots1.pdf}
+    &\includegraphics{../common/math/graphics/pdfs/unitcircle_roots2.pdf}
+    &\includegraphics{../common/math/graphics/pdfs/unitcircle_roots3.pdf}
+    &\includegraphics{../common/math/graphics/pdfs/unitcircle_roots4.pdf}
+    \\
+    $x+1=0$ & $x^2+1=0$ & $x^3+1=0$ & $x^4+1=0$
+    \\\hline
+  \end{tabular}
+  \caption{
+     Roots of $x^{n}+1=0$
+     %\label{fig:h(x)=sqrt2}
+     }
 \end{figure}
+
 %--------------------------------------
 \begin{lemma}
 %--------------------------------------
 %Let $\setZ$ be the set of all zeros of a polynomial $\fp(x)$ over a field $\fieldF$.
 \lembox{
-  \brb{x^\xN + 1 = 0}  
+  \brb{x^\xN + 1 = 0}
   \qquad\implies\qquad
   \brb{\text{roots of x} =
     \set{\exp\brs{i\frac{\pi}{\xN}(2n+1)}}
@@ -1043,19 +981,15 @@ $x+1=0$ & $x^2+1=0$ & $x^3+1=0$ & $x^4+1=0$
   e^{i\xN\theta_n - i2\pi n} &= -1                     && n\in\Z   \\
   \xN\theta_n - 2\pi n       &= \pi                    && n=0,1,\ldots,\xN-1   \\
   \xN\theta_n                &=  2\pi n + \pi                                   \\
-  \theta_n                 &=  \frac{\pi}{\xN}(2n + 1) 
+  \theta_n                 &=  \frac{\pi}{\xN}(2n + 1)
 \end{align*}
 \end{proof}
-
-
-
-
 
 %---------------------------------------
 \begin{theorem}
 \label{thm:hsym<==>1/x*}
 %---------------------------------------
-Let $N\in\Zp$, $I=\set{n\in\Z}{-N\le n\le N}$ and 
+Let $N\in\Zp$, $I=\set{n\in\Z}{-N\le n\le N}$ and
   $\ds\fp(x) \eqd \sum_{n=-N}^N \alpha_n x^n  \qquad \forall x\in\C$.
 \thmbox{
   \mcom{\alpha_n = \alpha_{-n}^\ast \quad \forall n\in I}
@@ -1066,7 +1000,7 @@ Let $N\in\Zp$, $I=\set{n\in\Z}{-N\le n\le N}$ and
 \end{theorem}
 \begin{proof}
 \begin{align*}
-\intertext{1. Proof that 
+\intertext{1. Proof that
   $\alpha_n=\alpha_{-n}^\ast \implies \fp(x) = \fp^\ast\left(\frac{1}{x^\ast}\right)$:
   }
   \fp(x)
@@ -1075,27 +1009,27 @@ Let $N\in\Zp$, $I=\set{n\in\Z}{-N\le n\le N}$ and
   \\&=   \alpha_0 + \sum_{n=1}^N \alpha_n x^n + \sum_{n=1}^N \alpha_{-n} x^{-n}
   \\&=   \alpha_0 + \sum_{n=1}^N \alpha_n x^n + \sum_{n=1}^N \alpha_n^\ast x^{-n}
     &&   \text{by left hypothesis}
-  \\&=   \alpha_0 + \sum_{n=1}^N \alpha_n^\ast x^{-n} + \sum_{n=1}^N \alpha_n x^n 
-  \\&=   \alpha_0 
-       + \sum_{n=1}^N \alpha_n^\ast \left(\frac{1}{x}\right)^n 
-       + \sum_{n=1}^N \alpha_n \left(\frac{1}{x}\right)^{-n} 
-  \\&=   \left[\alpha_0 
-       + \sum_{n=1}^N \alpha_n \left(\frac{1}{x^\ast}\right)^n 
-       + \sum_{n=1}^N \alpha_n^\ast \left(\frac{1}{x^\ast}\right)^{-n} 
+  \\&=   \alpha_0 + \sum_{n=1}^N \alpha_n^\ast x^{-n} + \sum_{n=1}^N \alpha_n x^n
+  \\&=   \alpha_0
+       + \sum_{n=1}^N \alpha_n^\ast \left(\frac{1}{x}\right)^n
+       + \sum_{n=1}^N \alpha_n \left(\frac{1}{x}\right)^{-n}
+  \\&=   \left[\alpha_0
+       + \sum_{n=1}^N \alpha_n \left(\frac{1}{x^\ast}\right)^n
+       + \sum_{n=1}^N \alpha_n^\ast \left(\frac{1}{x^\ast}\right)^{-n}
          \right]^\ast
     &&   \ifdochas{numsys}{\text{by \prefp{thm:conj}}}
-  \\&=   \left[\alpha_0 
-       + \sum_{n=1}^N \alpha_n    \left(\frac{1}{x^\ast}\right)^n 
-       + \sum_{n=1}^N \alpha_{-n} \left(\frac{1}{x^\ast}\right)^{-n} 
+  \\&=   \left[\alpha_0
+       + \sum_{n=1}^N \alpha_n    \left(\frac{1}{x^\ast}\right)^n
+       + \sum_{n=1}^N \alpha_{-n} \left(\frac{1}{x^\ast}\right)^{-n}
          \right]^\ast
     &&   \text{by left hypothesis}
   \\&=   \left[
-           \sum_{n=-N}^N \alpha_n    \left(\frac{1}{x^\ast}\right)^n 
+           \sum_{n=-N}^N \alpha_n    \left(\frac{1}{x^\ast}\right)^n
          \right]^\ast
   \\&= \fp^\ast\left(\frac{1}{x^\ast}\right)
     &&   \text{by definition of $\fp(x)$}
   \\
-\intertext{2. Proof that 
+\intertext{2. Proof that
   $\alpha_n=\alpha_{-n}^\ast \impliedby \fp(x) = \fp^\ast\left(\frac{1}{x^\ast}\right)$:
   }
   \sum_{n=-N}^N \alpha_n x^n
@@ -1104,15 +1038,15 @@ Let $N\in\Zp$, $I=\set{n\in\Z}{-N\le n\le N}$ and
   \\&=   \fp^\ast\left(\frac{1}{x^\ast}\right)
     &&   \text{by right hypothesis}
   \\&\eqd\left[
-           \sum_{n=-N}^N \alpha_n    \left(\frac{1}{x^\ast}\right)^n 
+           \sum_{n=-N}^N \alpha_n    \left(\frac{1}{x^\ast}\right)^n
          \right]^\ast
     &&   \text{by definition of $\fp(x)$}
-  \\&=   \sum_{n=-N}^N \alpha_n^\ast \left(\frac{1}{x}\right)^n 
+  \\&=   \sum_{n=-N}^N \alpha_n^\ast \left(\frac{1}{x}\right)^n
     &&   \ifdochas{numsys}{\text{by \prefp{thm:conj}}}
   \\&=   \sum_{n=-N}^N \alpha_{-n}^\ast x^{n}
     &&   \text{by symmetry of summation indices}
   \\ \\
-  \implies 
+  \implies
     &\quad \alpha_n=\alpha_{-n}^\ast
     &&   \text{by matching of polynomial coefficients}
 \end{align*}
@@ -1124,7 +1058,7 @@ Let $N\in\Zp$, $I=\set{n\in\Z}{-N\le n\le N}$ and
 \setlength{\unitlength}{0.15mm}
 \begin{picture}(300,300)(-130,-130)
   \thicklines
-  \color{axis}%  
+  \color{axis}%
     \put(-130,   0){\line(1,0){260} }%
     \put(   0,-130){\line(0,1){260} }%
     \put( 140,   0){\makebox(0,0)[l]{$\Real(x)$}}%
@@ -1150,7 +1084,7 @@ Let $N\in\Zp$, $I=\set{n\in\Z}{-N\le n\le N}$ and
 \begin{theorem}
 \label{thm:hsym==>rconj}
 %---------------------------------------
-Let $N\in\Zp$, $I=\set{n\in\Z}{-N\le n\le N}$ and 
+Let $N\in\Zp$, $I=\set{n\in\Z}{-N\le n\le N}$ and
   \[ \fp(x) \eqd \sum_{n=-N}^N \alpha_n x^n  \qquad \forall x\in\C \]
 \thmbox{
   \mcom{\alpha_n = \alpha_{-n}^\ast \quad \forall n\in I}
@@ -1158,7 +1092,7 @@ Let $N\in\Zp$, $I=\set{n\in\Z}{-N\le n\le N}$ and
   \quad\implies\quad
   \mcom{
     \Big[
-    \sigma \text{ is a root of }\fp(x) 
+    \sigma \text{ is a root of }\fp(x)
     \iff
     \frac{1}{\sigma^\ast} \text{ is a root of }\fp(x)
     \Big]
@@ -1172,15 +1106,15 @@ Let $N\in\Zp$, $I=\set{n\in\Z}{-N\le n\le N}$ and
     &&& \text{by left hypothesis}
   \\&\implies \fp(x) = \fp^\ast\left(\frac{1}{x^\ast}\right)  \quad \forall x\in\C
     && \text{by \prefp{thm:hsym<==>1/x*}}
-  \\&\implies 
+  \\&\implies
     \Big[
-    \sigma \text{ is a root of }\fp(x) 
+    \sigma \text{ is a root of }\fp(x)
     \iff
     \frac{1}{\sigma^\ast} \text{ is a root of }\fp(x)
     \Big]
 \end{align*}
 
-If $\sigma$ is a zero of $\fp(x)$, 
+If $\sigma$ is a zero of $\fp(x)$,
 then so is $\frac{1}{\sigma^\ast}$ because
 \[ \fp\left(\frac{1}{\sigma^\ast}\right) = \fp^\ast(\sigma) = 0^\ast = 0.\]
 \end{proof}
@@ -1193,15 +1127,15 @@ then so is $\frac{1}{\sigma^\ast}$ because
 \begin{fsL}
 \setlength{\unitlength}{0.2mm}
 \begin{picture}(200,230)(-100,-100)
-  %\graphpaper[10](0,0)(200,200)                  
-  \thicklines                                      
+  %\graphpaper[10](0,0)(200,200)
+  \thicklines
   \put(-100 ,   0 ){\line(1,0){200} }
   \put(   0 ,-100 ){\line(0,1){200} }
   \thicklines
   \qbezier[16](  0, 40)(  0, 40)( 70, 40)
   \qbezier[16](  0,-40)(  0,-40)( 70,-40)
   \qbezier[16]( 70, 40)( 70,  0)( 70,-40)
-  
+
   \put(  -5,   40 ){\makebox(  0,0)[r]{$+b$} }
   \put(  -5,  -40 ){\makebox(  0,0)[r]{$-b$} }
   \put(  75,    5 ){\makebox(  0,0)[l]{$a$} }
@@ -1215,7 +1149,7 @@ then so is $\frac{1}{\sigma^\ast}$ because
   \put(  80 ,  40 ){\makebox(0,0)[l]{zero at $x_1=a + i b$}}
   \put(  80 , -40 ){\makebox(0,0)[l]{zero at $x_2=a - i b=x_1^\ast$}}
   \put( -50 ,  10 ){\makebox(0,0)[rb]{zero at $x_2=c + i 0$}}
-\end{picture}                                   
+\end{picture}
 \end{fsL}
 \end{center}
 \caption{
@@ -1224,7 +1158,7 @@ then so is $\frac{1}{\sigma^\ast}$ because
    }
 \end{figure}
 \prefp{thm:zeros_cpairs} (next) states that the roots of real polynomials
-occur in complex conjugate pairs. 
+occur in complex conjugate pairs.
 This is illustrated in Figure~\ref{fig:zeros_cpairs}.
 %--------------------------------------
 \begin{theorem}
@@ -1234,7 +1168,7 @@ This is illustrated in Figure~\ref{fig:zeros_cpairs}.
 Let $\fp(x)=\sum_{n=0}^\xN \alpha_n x^n$ be a $\xN$th order polynomial.
 \thmbox{
   \left[\mcom{\seq{\alpha_n\in\R}{n=0,1,\ldots,\xN}}{coefficients are real}\right]
-  \implies 
+  \implies
   \left[ \mcom{\fp(x_0)=0 \iff \fp(x_0^\ast)=0}{zeros occur in conjugate pairs} \right]
   }
 \end{theorem}
@@ -1246,7 +1180,7 @@ Let $\fp(x)=\sum_{n=0}^\xN \alpha_n x^n$ be a $\xN$th order polynomial.
 \index{Routh-Hurwitz Criterion}
 \index{theorems!Routh-Hurwitz Criterion}
 %--------------------------------------
-Let $\fp(x)=\sum_{n=0}^\xN \alpha_n x^n$ be a $\xN$th order polynomial with 
+Let $\fp(x)=\sum_{n=0}^\xN \alpha_n x^n$ be a $\xN$th order polynomial with
 $\alpha_n\in\R$ and
 \[\begin{array}{>{\ds}l}
   d_0 \eqd \alpha_0
@@ -1279,11 +1213,11 @@ $\alpha_n\in\R$ and
              \alpha_{2n-1} & \alpha_{2n-2} & \cdots & \alpha_n
            \end{array}
   \end{array}\]
-Let $\opS\seqn{x_n}$ be the number of sign changes of some sequence 
+Let $\opS\seqn{x_n}$ be the number of sign changes of some sequence
 $\seqn{x_n}$ after eliminating all zero elements ($x_n=0$).
 \thmbox{\begin{array}{*{3}{>{\ds}l}}
   \mcom{|\set{x_n}{\fp(x_n)=0,\; \Re[x_n]>0}|}
-       {number of roots in right half plane} 
+       {number of roots in right half plane}
     &=& \mcom{\opS\seqn{d_0,\;d_1,\;d_1d_2,\;d_2d_3,\;\ldots,\;d_{p-2}d_{p-1},\;\alpha_p}}
              {number of sign changes}
   \\&=& \mcom{\opS\seqn{d_0,\;d_1,\;\frac{d_2}{d_1},\; \frac{d_3}{d_2},\; \ldots,\; \frac{d_p}{d_{p-1}} }}
@@ -1298,12 +1232,12 @@ $\seqn{x_n}$ after eliminating all zero elements ($x_n=0$).
 \index{Descartes rule of signs}
 \index{theorems!Descartes rule of signs}
 %--------------------------------------
-Let $\fp(x)=\sum_{n=0}^\xN \alpha_n x^n$ be a $\xN$th order polynomial with 
+Let $\fp(x)=\sum_{n=0}^\xN \alpha_n x^n$ be a $\xN$th order polynomial with
 $\alpha_n\in\R$.
 \thmbox{
   \mcom{|\set{x_n}{\fp(x_n)=0,\; \Re[x_n]>0},\; \Im[x_n]=0|}
-       {number of roots on right real axis} 
-    = 
+       {number of roots on right real axis}
+    =
         \mcom{\opS\seqn{\alpha_n} - 2m}
              {number of sign changes $-$ even integer}
         \text{ where $m\in\Znn$}
@@ -1314,11 +1248,11 @@ $\alpha_n\in\R$.
 \begin{theorem}
 \footnote{\citerp{korn}{18}}
 %--------------------------------------
-Let $\fp(x)=\sum_{n=0}^\xN \alpha_n x^n$ be a $\xN$th order polynomial with 
+Let $\fp(x)=\sum_{n=0}^\xN \alpha_n x^n$ be a $\xN$th order polynomial with
 $\alpha_n\in\R$.
 \thmbox{
   \mcom{\alpha_0,\; \alpha_1,\;\ldots,\; \alpha_{k-1}\;\ge 0}
-       {first $k$ coefficients are nonnegative} 
+       {first $k$ coefficients are nonnegative}
   \implies
   \left\{\begin{array}{>{\ds}l}
     \mcom{|\set{x_n}{\fp(x_n)=0,\; \Im[x_n]=0}|}{number of real roots} <
@@ -1339,13 +1273,13 @@ $\alpha_n\in\R$.
 \index{Rolle's Theorem}
 \index{theorems!Rolle's Theorem}
 %--------------------------------------
-Let $\fp(x)=\sum_{n=0}^\xN \alpha_n x^n$ be a $\xN$th order polynomial with 
+Let $\fp(x)=\sum_{n=0}^\xN \alpha_n x^n$ be a $\xN$th order polynomial with
 $\alpha_n\in\R$.
-%Let $\set{r_n}{r_n\in\R,\; \fp(r_n)=0,\; x_1\le x_2\le \cdots \le x_m,\; n=1,2,\ldots,m}$ 
+%Let $\set{r_n}{r_n\in\R,\; \fp(r_n)=0,\; x_1\le x_2\le \cdots \le x_m,\; n=1,2,\ldots,m}$
 %be the {\bf real consecutive roots} of $\fp(x)$.
-%Let $\set{q_n}{q_n\in\R,\; \fp'(q_n)=0}$ 
+%Let $\set{q_n}{q_n\in\R,\; \fp'(q_n)=0}$
 %be the {\bf real roots} of $\fp'(x)$.
-The number of real zeros of $\fp'(x)$ between any two real 
+The number of real zeros of $\fp'(x)$ between any two real
 consecutive real zeros of $\fp(x)$ is {\bf odd}.
 \end{theorem}
 
@@ -1384,7 +1318,7 @@ Let $\fieldF$ be a \structe{field}.
 \begin{example}
 %--------------------------------------
 \exboxt{
-  An example of a rational function using polynomials in $x^{-1}$ is 
+  An example of a rational function using polynomials in $x^{-1}$ is
   \\\indentx$\begin{array}{rcl}
     A(x) &=& \ds\frac{b_0 + \beta_1x^{-1} + \beta_2x^{-2} + \beta_3x^{-3} }
                      {1   + \alpha_1x^{-1} + \alpha_2x^{-2} + \alpha_3x^{-3}}
@@ -1426,11 +1360,11 @@ Let $\fieldF$ be a \structe{field}.
     \footnotemark
   }
   {../common/people/euclid_wkp_pdomain_bw.jpg}
-  {Thus, if a straight-line is cut at random, 
+  {Thus, if a straight-line is cut at random,
    then the square on the whole (straight-line) is equal to
-   the (sum of the) squares on the pieces (of the straight-line), 
+   the (sum of the) squares on the pieces (of the straight-line),
    and twice the rectangle contained by the pieces.}
-  %{If a straight line be cut at random, 
+  %{If a straight line be cut at random,
   % the square on the whole is equal to the squares on the
   % segments and twice the rectangle of the segments.
   %}
@@ -1456,7 +1390,7 @@ Let $\fieldF$ be a \structe{field}.
 \label{thm:taylor}
 %--------------------------------------
 Let $\spC$ be the space of all \prope{analytic} functions
-and $\hxs{\opDif}$ in $\clF{\spC}{\spC}$ the \ope{differentiation operator}. 
+and $\hxs{\opDif}$ in $\clF{\spC}{\spC}$ the \ope{differentiation operator}.
 \thmboxt{
   A \opd{Taylor series} about the point $a$ of a function $\ff\in\clF{\spC}{\spC}$ is
   $\ds\begin{array}{rc>{\ds}l@{\qquad}C@{\qquad}D}
@@ -1495,17 +1429,17 @@ and $\hxs{\opDif}$ in $\clF{\spC}{\spC}$ the \ope{differentiation operator}.
   }
 \end{theorem}
 \begin{proof}
-This theorem is proven using two different techniques. 
+This theorem is proven using two different techniques.
 Either is sufficient.
 The first requires the Maclaurin series resulting in a more compact proof,
 but requires the additional (here unproven) Maclaurin series.
-The second proof uses induction resulting in a longer proof, 
+The second proof uses induction resulting in a longer proof,
 but does not require any external theorem.
 
 \begin{enumerate}
 \item Proof using Maclaurin series:
 \begin{align*}
-  (x+y)^n 
+  (x+y)^n
     &= \sum_{k=0}^\infty \frac{1}{k!} \deriv{^k}{y^k}\Big[(x+y)^n\Big]_{y=0} y^k
     \qquad\text{by Maclaurin series (\prefp{thm:taylor})}
   \\&= \sum_{k=0}^\infty \frac{1}{k!} \Big[n(n-1)(n-2)\cdots(n-k+1)(x+y)^{n-k}\Big]_{y=0} y^k
@@ -1540,7 +1474,7 @@ but does not require any external theorem.
   \\&= (x+y)^n|_{n=1}
 \end{align*}
 
-\item Proof that 
+\item Proof that
   $(x+y)^{n} = \sum_{k=0}^{n} {n \choose k} x^k y^{n-k}
    \implies
    (x+y)^{n+1} = \sum_{k=0}^{n+1} {n \choose k} x^k y^{n+1-k}:
@@ -1548,13 +1482,13 @@ but does not require any external theorem.
 \begin{align*}
   &\sum_{k=0}^{n+1} {n+1 \choose k} x^k y^{n+1-k}
   \\&= x^{n+1} + y^{n+1} + \sum_{k=1}^{n} {n+1 \choose k} x^k y^{n+1-k}
-  \\&= x^{n+1} + y^{n+1} 
+  \\&= x^{n+1} + y^{n+1}
      + \sum_{k=1}^{n} \left[ {n \choose k-1}+ {n \choose k} \right] x^k y^{n+1-k}
     \qquad\text{by \thme{Pascal's Rule} \ifxref{binomial}{thm:Pascals_Rule}}
-  \\&= x^{n+1} + y^{n+1} 
+  \\&= x^{n+1} + y^{n+1}
      + \sum_{k=1}^{n} {n \choose k-1} x^k y^{n+1-k}
      + \sum_{k=1}^{n} {n \choose k  } x^k y^{n+1-k}
-  \\&= x^{n+1} + y^{n+1} 
+  \\&= x^{n+1} + y^{n+1}
      + \left[ \sum_{k=0}^{n} {n \choose k  } x^{k+1} y^{n+1-(k+1)} -x^{n+1}\right]
      + \left[ \sum_{k=0}^{n} {n \choose k  } x^k y^{n+1-k} - y^{n+1} \right]
   \\&= x \sum_{k=0}^{n} {n \choose k } x^k y^{n-k}
